梅赛德斯批量替换部分人名

--- a/OEBPS/Text/c006.xhtml
+++ b/OEBPS/Text/c006.xhtml
@@ -74,7 +74,7 @@
     <p>据说更加在脚尖部分由于同样埋入小龙的骨的事也保护着脚尖。像安全鞋一样的东西吗？</p>
     <p>梅赛德斯把这个也包含预备投入到二个购物篮，面向了下面的地方。</p>
     <p>其次需要的就是衣服。我想要又结实，又脏的衣服。</p>
-    <p>现在的Melsedes的服装是闪闪发光的，很难说是适合探索的。</p>
+    <p>现在的梅赛德斯的服装是闪闪发光的，很难说是适合探索的。</p>
     <p>暂且物色衣服，不久梅赛德斯选择了白的衬衫和，那个上面穿的龙皮的Mantaraybest。</p>
     <p>下面是注重方便活动的短裤和保护膝盖的紧身裤。</p>
     <p>最后当场买了一件黑色的外套作为防寒用具。</p>
