--- a/OEBPS/Text/c010.xhtml
+++ b/OEBPS/Text/c010.xhtml
@@ -95,7 +95,7 @@
     <p>梅赛德斯满足地抚摸着那样的黑狼。</p>
     <p>「好，我回地上去。要好好地教训一下这家伙”</p>
     <p>就这样，让黑狼安然长大的梅赛德斯，就那样带回了黑狼。</p>
-    <p>◆</p>
+    <p class="divline"></p>
     <p>带着黑狼回来的梅赛德斯，首先从让黑狼相信自己开始了。</p>
     <p>如果告诉上下关系的话，下一次就建立信赖关系。基本的教育。</p>
     <p>另外，因为一直都很难叫到无名氏，所以给它起了个名字叫小黑。</p>
