--- a/OEBPS/Text/c013.xhtml
+++ b/OEBPS/Text/c013.xhtml
@@ -19,11 +19,11 @@
     <p>「汪」</p>
     <p>前有梅赛德斯，后有本凯，而玛吉特则乘在小黑上。</p>
     <p>这样一来，弱小的魔物就不会伤害到玛格丽特了吧。</p>
-    <p>给了马尔吉特羊皮纸和笔，指示魔物出现后要画出它的样子。</p>
+    <p>给了玛吉特羊皮纸和笔，指示魔物出现后要画出它的样子。</p>
     <p>在一楼徘徊了一阵，然后首先出现的是巨大的鼹鼠。这也是梅赛德斯第一个战斗的魔物。</p>
     <p>「和之前一样的地方出来的啊」</p>
     <p>梅赛德斯轻轻跳跃，踢进鼹鼠的脖颈，折断脖子的骨头使之断命。</p>
-    <p>马尔吉特对这一景象曾一时愣住了，但不久之后又像想起来一样记录了鼹鼠的样子。</p>
+    <p>玛吉特对这一景象曾一时愣住了，但不久之后又像想起来一样记录了鼹鼠的样子。</p>
     <p>等那个的期间，梅赛德斯抱着胳膊观察鼹鼠的尸体。</p>
     <p>说是偶然也就罢了，这个大小也许是巨大鼹鼠的平均值。</p>
     <p>但是左眼的伤口令人在意。记得以前打倒的人也有同样的伤。</p>
@@ -68,14 +68,14 @@
     <p>「嗯。给我看看」</p>
     <p>总之现状是推测的材料不够。</p>
     <p>现在即使对地牢的真面目进行各种各样的思考，也只是越来越了解其可怕之处而无法接近答案。</p>
-    <p>因此梅赛德斯停止了思考，将意识转向了马尔吉特画的画。</p>
+    <p>因此梅赛德斯停止了思考，将意识转向了玛吉特画的画。</p>
     <p>「果然很擅长啊。一瞬间以为是照片」</p>
     <p>「zhaopian？」</p>
     <p>「做得很好」</p>
     <p>像是表扬玛吉特一样用力抚摸他的头，仔细想想，梅赛德斯和玛吉特的年龄只有一个不同。</p>
     <p>不知不觉间就想和比自己小得多的孩子做对手，但是玛吉特好像也挺开心的，所以也可以吧。</p>
     <p>「好，继续吧」</p>
-    <p>之后梅赛德斯也打败了各种各样的魔物，让马尔吉特画了画。</p>
+    <p>之后梅赛德斯也打败了各种各样的魔物，让玛吉特画了画。</p>
     <p>来了好几次之后，就能大致知道哪个阶层会出现哪个魔物。</p>
     <p>不久，一行走到了十一层。</p>
     <p>到了这里，梅赛德斯觉得玛吉特已经会有一定的生命危险了。</p>
