--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -86,7 +86,7 @@
     <p>“万能钥匙有携带出色的待机模式，和作为钥匙使用的两种钥匙模式。钥匙模式也可以作为武器使用，推荐使用剑等形状”</p>
     <p>“锁的时候也不能变小吗？”</p>
     <p>“在技术问题上，无论如何在发挥关键作用的时候都会变成刀剑的大小。到极限小型化做着,不过，这个以上好象不可能。对不起”</p>
-    <p>梅赛德斯点头理解图威尔夫的说明。</p>
+    <p>梅赛德斯点头理解zwölf的说明。</p>
     <p>虽然不知道原因，但是和待机模式不同，作为钥匙使用的时候需要很大。</p>
     <p>这恐怕是必要的作用差别吧。</p>
     <p>不是技术性地小型化不可能，钥匙的作用太大以小型不能做那个。</p>
