--- a/OEBPS/Text/c018.xhtml
+++ b/OEBPS/Text/c018.xhtml
@@ -121,7 +121,7 @@
     <p>那个价格由于受欢迎持续上升，现在一张超过2万Elka。</p>
     <p>对于花了这么多钱买了巧克力的有钱人来说，这个奖励太贵了吧。</p>
     <p>但是，在梅赛德斯本人看来，这只是递给100日元的板状巧克力板以下的东西的感觉。</p>
-    <p>但是由于这个奖励，马尔吉特的干劲一下子提高了，结果学习顺利的进行了。</p>
+    <p>但是由于这个奖励，玛吉特的干劲一下子提高了，结果学习顺利的进行了。</p>
     <br>
     <p>结束了玛吉特的学习，梅赛德斯回家后，家门前停着一辆带有陌生徽章的马车。</p>
     <p>为了堵住那辆马车的去路，本凯和小黑挡住了去路，衣冠楚楚的男人拼命地说服他。</p>
