--- a/OEBPS/Text/c019.xhtml
+++ b/OEBPS/Text/c019.xhtml
@@ -135,7 +135,7 @@
         <p>她们一击一击地向我发起攻击，并且通过我忍耐来显示我的力量”</p>
     </span>
     <p>梅赛德斯对这句话感到些许的安心。</p>
-    <p>太好了……如果在这里，我是为了自己而在人们面前敲打像马尔吉特一样胆怯的少女的外道的话，就必须改变预定让他出丑。</p>
+    <p>太好了……如果在这里，我是为了自己而在人们面前敲打像玛吉特一样胆怯的少女的外道的话，就必须改变预定让他出丑。</p>
     <p>但是作为最低限度的绅士的气概好象持(有)着。</p>
     <p>这样的话就可以安心输了。</p>
     <span class="character">
