--- a/OEBPS/Text/c020.xhtml
+++ b/OEBPS/Text/c020.xhtml
@@ -92,7 +92,7 @@
     <p>（也就是说只有迷宫攻略者才能造出来的道具……？）</p>
     <span class="character"><p>“是的。但是从状况来看，波里斯自身作为攻略者的可能性极低。</p>
     <p>如果他自己有迷宫的话，大概会做出大量的魔物吧」</p></span>
-    <p>梅赛德斯知道了，与图威尔夫小声对话，波里斯使用过的石头是攻略者由来的东西。</p>
+    <p>梅赛德斯知道了，与zwölf小声对话，波里斯使用过的石头是攻略者由来的东西。</p>
     <p>但是，波里斯自身攻占地牢制造出来的可能性极低，齐维尔说。</p>
     <p>那么考虑的可能性不多。</p>
     <p>玻利斯抓住了偶然被其他攻略者流放到市场的封石了吗？</p>
