--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -91,7 +91,7 @@
     <p>“嗯？”</p>
     <p>“那个，那个，姐姐。哥哥的事，帮你吧……？”</p>
     <p>“……”</p>
-    <p>马尔吉特一定无法正确理解情况吧。</p>
+    <p>玛吉特一定无法正确理解情况吧。</p>
     <p>菲利克斯为了巩固自己的地位……也就是说，自己被抛弃的可能性很高。</p>
     <p>但是，正是因为这样年幼无垢的少女的控诉才让梅赛德斯产生了回响。</p>
     <p>没有算计也没有，只是纯粹地想帮助这样的想法在梅赛德斯没有。</p>
