--- a/OEBPS/Text/c034.xhtml
+++ b/OEBPS/Text/c034.xhtml
@@ -91,7 +91,7 @@
     <p>“不凑巧，这个推理不合逻辑。我不是旧王派，年龄也……嗯，正如你所看到的那样”</p>
     <p>包括转生前在内，虽然都是年龄欺诈，但说起作为梅赛德斯而生活的年月，和外表并没有什么差别。</p>
     <p>总之，有必要先从这个男的口中问出情报，但是即使普通的询问也不会回答。</p>
-    <p>到底是怎么回事啊，于是决定向图威尔夫寻求智慧。</p>
+    <p>到底是怎么回事啊，于是决定向zwölf寻求智慧。</p>
     <p>“茨瓦尔夫。我想从这些人那里听到一些信息，有什么好的方法吗？”</p>
     <p>“哥布林赫克斯可以使用催眠魔法。这样能听到吗？”</p>
     <p>「好。那么现在马上生产一体哥布林赫克斯，给我拿出来”</p>
