--- a/OEBPS/Text/c036.xhtml
+++ b/OEBPS/Text/c036.xhtml
@@ -119,5 +119,5 @@
     <p>那个徽章上画的剑，确实和那个第一王子拿着的剑一样。</p>
     <p>所以，我想那是万能钥匙吧……。</p>
     <p>“不，那不是万能钥匙。”</p>
-    <p>被图威尔夫的一句话否定了。</p>
+    <p>被zwölf的一句话否定了。</p>
 </body>
