--- a/OEBPS/Text/c046.xhtml
+++ b/OEBPS/Text/c046.xhtml
@@ -23,7 +23,7 @@
     <p>桜色の髪は艶があり、顔立ちも一見すると少女と勘違いしてしまいそうなものだ。</p>
     <p>身体つきも華奢で、本当に女のような男だ。</p>
     <p>……というか、本当に女の子なのかもしれない。正直見分けが全くつかないのだ。</p>
-    <p>「よく来たね、梅赛德斯・グリューネヴァルト」</p>
+    <p>「よく来たね、梅赛德斯・格鲁内瓦特」</p>
     <p>あ、男だ。</p>
     <p>少年の声を聞いた事で梅赛德斯は彼の性別を確信した。</p>
     <p>見た目に反して声が低いのだ。</p>
@@ -57,35 +57,35 @@
     <p>来るというなら仕方ない。骨の十本や二十本は覚悟してもらおう。</p>
     <p>しかしまさに両者がぶつかる寸前で、突然何者かがドアを開けて乱入してきた。</p>
     <p>「はい、そこまで！」</p>
-    <p>飛び込んできたのはハンナであった。</p>
+    <p>飛び込んできたのは汉娜であった。</p>
     <p>隣には彼女のペットであるウサちゃんもおり、手には銃剣を構えている。</p>
     <p>待て、その銃はどこから持ってきた。</p>
     <p>「は？　一体誰だい、僕の邪魔を…………」</p>
     <p>ハルトマンは鬱陶しそうに乱入者へ目を向けたが、言葉が終わる前に顔を青褪めさせてしまった。</p>
     <p>ダラダラと冷や汗をかいており、その顔には『何故？』という疑問がありありと浮かんでいる。</p>
     <p>護衛の二人もそれは同様で、ガクガクと震えてすらいた。</p>
-    <p>「……ハ、ハンナ……先生……？」</p>
-    <p>「はーい。貴方の家庭教師のハンナでーす」</p>
+    <p>「……ハ、汉娜……先生……？」</p>
+    <p>「はーい。貴方の家庭教師の汉娜でーす」</p>
     <p>「…………あの、何故学園に？　り、臨時教師ですか？」</p>
     <p>「王女様の護衛よ。生徒として潜入してるの」</p>
     <p>「あの……貴女、生徒って年齢じゃ……」</p>
     <p>「んー？　聞こえないなあ？」</p>
-    <p>どうやらハルトマンの言っていた家庭教師とはハンナの事だったらしい。</p>
-    <p>王家直属の隠密部隊の隊長というのも彼女の事であり、更にハンナの夫が王家直属の裏幹部である事までこれで判明してしまった。</p>
-    <p>ハンナ自身は商人の子とか言っていたが……恐らく、バーガー家の表の立場が商人なのだろう。</p>
+    <p>どうやらハルトマンの言っていた家庭教師とは汉娜の事だったらしい。</p>
+    <p>王家直属の隠密部隊の隊長というのも彼女の事であり、更に汉娜の夫が王家直属の裏幹部である事までこれで判明してしまった。</p>
+    <p>汉娜自身は商人の子とか言っていたが……恐らく、バーガー家の表の立場が商人なのだろう。</p>
     <p>「……マ、ママン……」</p>
     <p>「ど、どうしてママがここに……」</p>
     <p>更に驚くべき単語が護衛二人の口から飛び出した。</p>
     <p>ママってお前。その図体でママって。</p>
-    <p>いやそれより、つまりはあれだ。このデカブツ二人はどうもハンナの息子だったらしい。</p>
-    <p>正直全然似ていないし、子供にしか見えないハンナからどうやってこんなデカいのが産まれたのか全然分からないが、彼等の反応を見る限り嘘はなさそうだ。</p>
+    <p>いやそれより、つまりはあれだ。このデカブツ二人はどうも汉娜の息子だったらしい。</p>
+    <p>正直全然似ていないし、子供にしか見えない汉娜からどうやってこんなデカいのが産まれたのか全然分からないが、彼等の反応を見る限り嘘はなさそうだ。</p>
     <p>……養子とかならばまだ納得は出来なくもない。</p>
     <p>「さて。話は聞かせてもらいました。</p>
     <p>貴方達は一体いつから、他人を脅すような悪い子になっちゃったんですか？　私はとても悲しいです」</p>
     <p>「あ、いや、その、それは、えっと、言葉のあやというか……ほ、本当にやる気なんてなかったというか……なあ？」</p>
     <p>ハルトマンが護衛二人に慌てて話を振ると、二人は勢いよく首を縦に振った。</p>
     <p>どうやらかなり恐れられているようだ。</p>
-    <p>しかしハンナは笑顔を浮かべつつも、発する気配は剣呑さを増している。</p>
+    <p>しかし汉娜は笑顔を浮かべつつも、発する気配は剣呑さを増している。</p>
     <p>「実行の有無に関係なく、そうして圧力をかけて従わせようとする行為を脅迫と言います。</p>
     <p>私達貴族は大きな権力を持つからこそ、その力の使い所を考えなくてはなりません。</p>
     <p>自らの為だけに他者を従わせるのでは暴君と変わりません」</p>
