--- a/OEBPS/Text/c050.xhtml
+++ b/OEBPS/Text/c050.xhtml
@@ -84,11 +84,11 @@
     <p>所以无论对方是谁，都会采取完全没有感情的态度。</p>
     <p>当然，根据对象多少会有所改变。</p>
     <p>对于那些流氓和像玛吉特那样的家人，同等的对待是不会流石化的。</p>
-    <p>但是，这只是因为他们认为应该这样做，实际上在梅赛德斯（Melsedes）中，这两者之间并没有很大的价值差异。</p>
+    <p>但是，这只是因为他们认为应该这样做，实际上在梅赛德斯（梅赛德斯）中，这两者之间并没有很大的价值差异。</p>
     <p>自己因为是姐姐有保护妹妹的义务··。</p>
     <p>有良知的人会珍惜妹妹的吧。</p>
     <p>家人是重要的东西···。</p>
-    <p>全部只是看附加值的判断，假设流氓和马尔吉特的附加值反转了的话——梅赛德斯一定扔掉玛吉特吧。</p>
+    <p>全部只是看附加值的判断，假设流氓和玛吉特的附加值反转了的话——梅赛德斯一定扔掉玛吉特吧。</p>
     <p>《你不懂人心》……这是前世经常听到的话。</p>
     <p>“比起那个，你没事吗？”</p>
     <p>“什么？”</p>
