--- a/OEBPS/Text/c053.xhtml
+++ b/OEBPS/Text/c053.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>53. プラクティスダンジョン</h1>　学園も屋敷もドロドロしている貴族社会に若干うんざりした梅赛德斯が向かった先は、実に久しぶりとなるシーカーギルドであった。
+    <h1>53. プラクティスダンジョン</h1>　学園も屋敷もドロドロしている貴族社会に若干うんざりした梅赛德斯が向かった先は、実に久しぶりとなるsakerギルドであった。
 
     <p>梅赛德斯がギルドに入ると荒くれ達の野獣のような視線が彼女を射抜く。</p>
     <p>互いが互いを商売敵と見做し、自分達以外は信じないと初手にして無言で明かされるこのピリピリとした感じが梅赛德斯は気に入っていた。</p>
@@ -27,11 +27,11 @@
     <p>これは偽装や虚偽を防止する為だ。</p>
     <p>昔は血さえ付ければ自分で能力値を更新出来たのだが、するとそれを利用して強者他人の血を付ける事で能力値の偽装を行う輩が現れ始めた。</p>
     <p>なので今のギルドカードは書き換え出来ない特殊なインクを用いた上で、新しいカードでなければ血を付けても反応しないようになっている。</p>
-    <p>この技術はかつてダンジョンより宝を持ち帰ったという伝説のシーカー『イーシャ・テンセ』が齎したものだ。</p>
+    <p>この技術はかつてダンジョンより宝を持ち帰ったという伝説のsaker『イーシャ・テンセ』が齎したものだ。</p>
     <p>梅赛德斯は指を切り、カードに血を垂らす。</p>
     <p>するとそこに、今の梅赛德斯の能力が記載された。</p>
     <p>【梅赛德斯・カルヴァート】</p>
-    <p>シーカーランク：C</p>
+    <p>sakerランク：C</p>
     <p>第一属性：土</p>
     <p>第二属性：風</p>
     <p>腕力：level　５</p>
