--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -96,5 +96,5 @@
     <p>教師（そりゃあこいつだけ二十歳なんだから勝つの当たり前だよなあ……）</p>
     <p>教師（誰かこいつ参加禁止にしろよ……）</p>
     <p>教師（座学がクソすぎて毎年赤点で留年してるけど、実技だけは強いんだよなコイツ）</p>
-    <p>ハンナ（フェリックス君、実質優勝なのに可哀想……）</p>
+    <p>汉娜（菲利克斯君、実質優勝なのに可哀想……）</p>
 </body>
