--- a/OEBPS/Text/c060.xhtml
+++ b/OEBPS/Text/c060.xhtml
@@ -34,7 +34,7 @@
     <p>那么，逃到学园，保护公主是很重要的。</p>
     <p>只是呼吁最初的口头等，今后去的hatari。</p>
     <p>（果然还是追过来啊……！）</p>
-    <p>但是，没有想以这个程度撒的那么甜。</p>
+    <p>但是，没有想以这个程度撒的那么天真。</p>
     <p>一身白衣立即在菲利克斯后面追赶，把马放飞。</p>
     <p>但是因为没有射箭的样子，所以至少不会杀死公主。</p>
     <p>马的速度是那边快。</p>
@@ -104,9 +104,9 @@
     <p>为什么打扰你呢……重要的是那里。</p>
     <p>“你打算干什么，校长……”</p>
     <p>“这是我从前在秘境旅行时发现的植物啊……。</p>
-    <p>不可思议的是，这种植物会在一瞬间成长，又回到了种子。</p>
+    <p>不可思议的是，这种植物会在一瞬间成长，又变回种子。</p>
     <p>或许，是一种魔物。我常年的研究找到了自由控制的方法”</p>
-    <p>“我没听说过这样的事！我在问为什么要打扰你！”</p>
+    <p>“我没听说过这样的事！我在问为什么要打扰我！”</p>
     <p>“嗯，为什么……不知为什么……哎呀，为什么呢……”</p>
     <p>突然，一边笑着，弗雷德里克一边回避着菲利克斯的话。</p>
     <p>他沉默了一会儿，一会儿又像想起来似的拍手致意。</p>
