--- a/OEBPS/Text/c061.xhtml
+++ b/OEBPS/Text/c061.xhtml
@@ -11,22 +11,22 @@
 
 <body>
     <h1>61. すり替わり</h1>
-    <p>フレデリックの姦計に嵌り、白装束達に捕えられてしまったフェリックス達は馬車に乗せられてベアトリクス帝国へと運ばれていた。</p>
+    <p>弗里德里克の姦計に嵌り、白装束達に捕えられてしまった菲利克斯達は馬車に乗せられてベアトリクス帝国へと運ばれていた。</p>
     <p>両手両足は縛られ、武器も取り上げられてしまったので抵抗したくても出来ない。</p>
     <p>白装束達は敵襲を警戒しながら慎重に、しかし素早く移動して国境へ向かっている。</p>
     <p>恐らく国境付近に本隊が待機しているのだろう。</p>
     <p>「坊主も災難だったな。まあ俺等の目的は王女様だけだから、坊主は国境前で降ろしてやるよ」</p>
-    <p>「しかし隊長。上層部は邪魔者は全て殺せと……」</p>
+    <p>「但是队长。上层说杀死所有的干扰者……」</p>
     <p>「邪魔者なんざいなかった。ここにいるのは乗る馬車を間違えただけの現地の坊主だ。そうだな？」</p>
     <p>「はっ、その通りであります！」</p>
-    <p>白装束が何か言っているが、フェリックスはそれどころではない。</p>
+    <p>白装束が何か言っているが、菲利克斯はそれどころではない。</p>
     <p>守らなければならない王女を守れなかった。</p>
     <p>しかもあろう事か学園長が内通者だったのだ。</p>
     <p>それを見抜けなかった己の間抜けさと、まんまと踊らされたという事実。</p>
-    <p>それらが伸しかかり、フェリックスの気を沈ませていた。</p>
+    <p>それらが伸しかかり、菲利克斯の気を沈ませていた。</p>
     <p>「殿下は……これからどうなるんだ」</p>
     <p>「さあなあ……まあ、傷を付けるなって言われたし、悪いようにはならないと思うが」</p>
-    <p>フェリックスの問いに隊長と呼ばれている白装束が答えた。</p>
+    <p>菲利克斯の問いに隊長と呼ばれている白装束が答えた。</p>
     <p>隊長といえど、所詮は隠密の一部隊の長に過ぎない。</p>
     <p>この作戦の詳細な目的までは知らないのだろう。</p>
     <p>「ここだけの話、帝国うちは女尊男卑だ。女で王家で王剣を使えるとくりゃあ、まず優遇されると思っていい。</p>
@@ -36,40 +36,40 @@
     <p>ぞっとする話であった。</p>
     <p>ベルンハルトといい、何故上に立つ者というのは誰もかれも極端な方向に振り切れているのだろう。</p>
     <p>むしろそれこそが上に立つ素質とでも言うのか。</p>
-    <p>それはともかく、フェリックスは今ここを降りるわけにはいかない。</p>
-    <p>自分がここを離れてしまえばジークリンデは敵地で一人になってしまう。</p>
+    <p>それはともかく、菲利克斯は今ここを降りるわけにはいかない。</p>
+    <p>自分がここを離れてしまえば吉克林德は敵地で一人になってしまう。</p>
     <p>それがどれだけ心細いか……。</p>
     <p>自分などが頼りになるとは思えない。</p>
-    <p>しかし敵地で少女を一人にするほどフェリックスは薄情ではないのだ。</p>
-    <p>それに見よ。本来気が強いはずのジークリンデは怯えているのか、先程から一言も声を発していないではないか。</p>
+    <p>しかし敵地で少女を一人にするほど菲利克斯は薄情ではないのだ。</p>
+    <p>それに見よ。本来気が強いはずの吉克林德は怯えているのか、先程から一言も声を発していないではないか。</p>
     <p>可哀想に……どれだけ恐怖を感じているのか。</p>
-    <p>フェリックスがそう思っているうちに白装束達は部屋を出て行った。</p>
-    <p>ここは馬車であるが、フェリックス達の逃走防止として狭い個室が用意されている。</p>
+    <p>菲利克斯がそう思っているうちに白装束達は部屋を出て行った。</p>
+    <p>ここは馬車であるが、菲利克斯達の逃走防止として狭い個室が用意されている。</p>
     <p>ドアが閉められ、鍵をかけられた。</p>
     <p>脱出出来るような場所はどこにもない。</p>
     <p>「殿下、聞いてください。逃げる前に殿下の乗っていた魔物に手紙を持たせました。</p>
     <p>上手くあの魔物がブルートに着けば、すぐに救助隊が組まれるはずです」</p>
     <p>「…………」</p>
-    <p>フェリックスは白装束に追われていた時、ジークリンデの使っていたギガンティッシュハムスターの口に袋を詰めた。</p>
+    <p>菲利克斯は白装束に追われていた時、吉克林德の使っていたギガンティッシュハムスターの口に袋を詰めた。</p>
     <p>あの中には万一の時の為に救助を要請する為の手紙が入っている。</p>
     <p>なのでギガンティッシュハムスターがあの袋を吐き出したり、あるいはゴール地点と全く関係ない方向に行ったりしない限りは無事に届くはずだ。</p>
     <p>問題は……ギガンティッシュハムスターは賢くないので、コースアウトをしてそのままブルートと関係ない場所に住み着いて野生化してしまう可能性が高いという事か。</p>
-    <p>それを聞いたジークリンデは小さく首を振る。</p>
+    <p>それを聞いた吉克林德は小さく首を振る。</p>
     <p>「んー……それじゃあ二十点かな。あの状況で機転を利かせたのは評価出来るけどハムスターが主もなく目的地に着くわけないよ」</p>
     <p>それは驚くほど冷静で、怯えとは無縁な声色であった。</p>
-    <p>それどころかフェリックスの取った手段を酷評する余裕すらある。</p>
-    <p>流石にこれにはフェリックスも違和感を覚え、ジークリンデをまじまじと見た。</p>
-    <p>するとジークリンデは縛られていたはずの手を自由に動かして、ウィッグを外す。</p>
-    <p>そこにいたのは、ドヤ顔ダブルピースをしたハンナであった。</p>
+    <p>それどころか菲利克斯の取った手段を酷評する余裕すらある。</p>
+    <p>流石にこれには菲利克斯も違和感を覚え、吉克林德をまじまじと見た。</p>
+    <p>すると吉克林德は縛られていたはずの手を自由に動かして、ウィッグを外す。</p>
+    <p>そこにいたのは、ドヤ顔ダブルピースをした汉娜であった。</p>
     <p>（何いィィィィィ―ッ！！？）　</p>
     <p>すり替えておいたのさ！</p>
     <p>そんな心の声が聞こえそうな程、それはそれは見事なドヤ顔であった。</p>
     <p>*</p>
     <p>どんな事にも予想外というものがある。</p>
-    <p>ジークリンデとハンナのすり替わりをフレデリックが予想出来なかったように、ハンナもまた全てを予測出来るわけではない。</p>
-    <p>彼女の企み通りにハンナの恰好をしたジークリンデは、魔物もなしに平原を走っていた。</p>
+    <p>吉克林德と汉娜のすり替わりを弗里德里克が予想出来なかったように、汉娜もまた全てを予測出来るわけではない。</p>
+    <p>彼女の企み通りに汉娜の恰好をした吉克林德は、魔物もなしに平原を走っていた。</p>
     <p>いや、違う。よく見れば彼女の足元にはちゃんと魔物がいる。</p>
-    <p>それは亀であった。ジークリンデは何と、亀の甲羅の上に片足で乗って滑るように平原を突っ切っていたのだ。</p>
+    <p>それは亀であった。吉克林德は何と、亀の甲羅の上に片足で乗って滑るように平原を突っ切っていたのだ。</p>
     <p>魔物名を『シュタイフェ・ブリーゼ・シルトクレーテ』。名前だけは無駄に格好いい。</p>
     <p>サイズは靴と同程度と小さいが特筆すべきはそのパワーとスピードである。</p>
     <p>この亀は恐ろしく速く、その最高速度は時速にして８０㎞に達する。</p>
@@ -80,38 +80,38 @@
     <p>なので風の魔石との併用は必要不可欠だ。</p>
     <p>また、人の言う事を聞くほどの知性はないので騎獣には死ぬほど向かない。</p>
     <p>第一、見た目がダサい。</p>
-    <p>王都の魔物店では取り扱っていない魔物だが、ハンナはこれを別の都市から仕入れていた。</p>
+    <p>王都の魔物店では取り扱っていない魔物だが、汉娜はこれを別の都市から仕入れていた。</p>
     <p>別の都市から買ってはいけないなんてルールはない。決められた予算内であれば、何をしてもいいのだ。</p>
-    <p>そしてハンナは出発直前になってジークリンデのハム助と魔物を交換し、ジークリンデの変装をして平原を走り出した。</p>
+    <p>そして汉娜は出発直前になって吉克林德のハム助と魔物を交換し、吉克林德の変装をして平原を走り出した。</p>
     <p>白装束の襲撃を予測出来ていたわけではない。</p>
-    <p>ただ単に、この遠出の実習でジークリンデが一時的とはいえ監督生と二人だけの無防備な状態になる事を警戒しただけだ。</p>
+    <p>ただ単に、この遠出の実習で吉克林德が一時的とはいえ監督生と二人だけの無防備な状態になる事を警戒しただけだ。</p>
     <p>なので自分に付けられた監督生が息子だったのをこれ幸いとし、無理を利かせて強引にチェンジした。</p>
-    <p>こうしてハンナはまんまと白装束と、ついでにフェリックスを騙して入れ替わり、ジークリンデを守る事に成功したのだ。</p>
-    <p>ここまではハンナの予測通り。</p>
+    <p>こうして汉娜はまんまと白装束と、ついでに菲利克斯を騙して入れ替わり、吉克林德を守る事に成功したのだ。</p>
+    <p>ここまでは汉娜の予測通り。</p>
     <p>では何が予想外だったのか。</p>
-    <p>それは、ハンナが降りた後のギガンティッシュハムスター、ハム助の行動であった。</p>
-    <p>騎手を失い、進路を見失ったハムスケは何と、匂いを辿って本来の飼い主であるジークリンデの所へ走ったのだ。</p>
-    <p>「ん？　あれはハム助？　だが何故ハンナがいないんだ……」</p>
-    <p>ジークリンデが止まるとハム助は彼女に飛びつき、愛情表現としてジークリンデを頬袋に詰めようとした。</p>
-    <p>これにはジークリンデも慌てたが、しかし頬袋に上半身が入ってしまった事で必然的にハム助の口内にあった袋が目に付く。</p>
+    <p>それは、汉娜が降りた後のギガンティッシュハムスター、ハム助の行動であった。</p>
+    <p>騎手を失い、進路を見失ったハムスケは何と、匂いを辿って本来の飼い主である吉克林德の所へ走ったのだ。</p>
+    <p>「ん？　あれはハム助？　だが何故汉娜がいないんだ……」</p>
+    <p>吉克林德が止まるとハム助は彼女に飛びつき、愛情表現として吉克林德を頬袋に詰めようとした。</p>
+    <p>これには吉克林德も慌てたが、しかし頬袋に上半身が入ってしまった事で必然的にハム助の口内にあった袋が目に付く。</p>
     <p>それを掴んでハム助の口から脱出し、袋を開いた。</p>
     <p>すると中に手紙があったので読むと、そこには敵襲を受けて救助を要請する旨が書かれていた。</p>
-    <p>勿論あの場でフェリックスが書いたわけではなく、あらかじめ『そういう事態』が起きた時の為に監督生に配られていたものだ。なのでこの手紙からは襲撃者の正体までは分からない。</p>
-    <p>しかしジークリンデはすぐに、自分を狙う白装束の仕業だと答えに行き着いてしまった。</p>
-    <p>つまり……自分の身代わりでハンナと、梅赛德斯の兄が捕まってしまったのだ。</p>
+    <p>勿論あの場で菲利克斯が書いたわけではなく、あらかじめ『そういう事態』が起きた時の為に監督生に配られていたものだ。なのでこの手紙からは襲撃者の正体までは分からない。</p>
+    <p>しかし吉克林德はすぐに、自分を狙う白装束の仕業だと答えに行き着いてしまった。</p>
+    <p>つまり……自分の身代わりで汉娜と、梅赛德斯の兄が捕まってしまったのだ。</p>
     <p>「いかん！　こうしてはいられない！」</p>
-    <p>ジークリンデは責任感が強く、それ以上に正義感が強い。</p>
+    <p>吉克林德は責任感が強く、それ以上に正義感が強い。</p>
     <p>そんな彼女が自らの身替わりになってしまった者を放置するかといえば勿論否であり、ハム助に飛び乗ると逆走を開始してしまった。</p>
     <p>「ハム助！　襲撃者の場所を教えてくれ！」</p>
     <p>「うおおおおおおい、どこ行くの王女様！？」</p>
-    <p>勿論これに慌てたのはハンナの息子である。</p>
+    <p>勿論これに慌てたのは汉娜の息子である。</p>
     <p>名をゲーロ・バーガーという。酷い名前もあったものだ。オエー。</p>
-    <p>彼はジークリンデのまさかの逆走に面食らい、慌ててその後を追った。　</p>
+    <p>彼は吉克林德のまさかの逆走に面食らい、慌ててその後を追った。　</p>
     <p>「……む」</p>
     <p>そして現在トップ独走中の梅赛德斯は山頂に到達していた。</p>
     <p>右手にはぐったりしたハルトマンが猫のように掴まれており、泡を吹いていた。</p>
     <p>そこから下の景色を眺めると、白装束が先導する馬車が目に入る。</p>
-    <p>梅赛德斯はハンナとジークリンデのすり替わりを知らない。</p>
+    <p>梅赛德斯は汉娜と吉克林德のすり替わりを知らない。</p>
     <p>だが、白装束の目的が何であろうと好き勝手にさせていい事になるとは思えなかった。</p>
     <p>なので、とりあえず白装束達を潰す為に行動を開始した。</p>
     <p>これから攫われたヒロインを助けに向かう救出編に入ります。</p>
