--- a/OEBPS/Text/c063.xhtml
+++ b/OEBPS/Text/c063.xhtml
@@ -109,7 +109,7 @@
     <p>国际问题等阶段早已过了」</p>
     <p>（嘛，虽然不能否定腐烂了）</p>
     <p>贝尔特里克斯的话有一部分是正确的。</p>
-    <p>オルクスは確かに腐っている。それは暗部に生きるハンナだからこそ同意出来る内容だ。</p>
+    <p>オルクスは確かに腐っている。それは暗部に生きる汉娜だからこそ同意出来る内容だ。</p>
     <p>这个国家的上层总是在贪污。</p>
     <p>上一代的王是个对他人没有眼光的傻瓜，已经被处死的今代是卖国奴。</p>
     <p>吉克林德虽然性格很正经，但过于认真很有可能会和上一代走上同一条路。</p>
