--- a/OEBPS/Text/c066.xhtml
+++ b/OEBPS/Text/c066.xhtml
@@ -39,7 +39,7 @@
     <p>所以他决定卖了公主。</p>
     <p>以此作为交换条件，在奥尔克斯降临帝国旗下之后，也承认这个学园的存续，不要对学生们出手……而且，最重要的是，让她答应自己就这样作为校长留下来。</p>
     <p>但是……。</p>
-    <p>“校长，很辛苦！汉娜和菲利克斯前辈作为我的替身，被一群身着白衣的人捉住了！”</p>
+    <p>“校长，不好了！汉娜和菲利克斯前辈作为我的替身，被一群身着白衣的人捉住了！”</p>
     <p>弗雷德里克知道了自己的计划完全崩溃了。</p>
     <p>气喘吁吁地闯入校长室的，是奇克林德公主本人。</p>
     <p>已经被帝国带走的，帝国的目标本身……绝对，不是现在这个场合好的人物。</p>
@@ -89,7 +89,6 @@
     <p>如果能很好地看清那个并使用熟练，这个植物成为武器和盾牌。</p>
     <p>他增长植物——拘留了疏忽大意的吉克林德。</p>
     <p>“哇！？校长，什么……！”</p>
-    <p>“</p>
     <p>“哇！？校长，你怎么……！”</p>
     <p>“不要动。我不想让你受伤”</p>
     <p>对吃惊的吉克林德，他用象丢掉感情一样的低的声音说道。</p>
@@ -106,7 +105,7 @@
     <p>“我觉得对你不好……就这样，和我一起去帝国吧。</p>
     <p>……虽然不能安慰，但是那个国家重视女性。首先会受到不好的待遇吧”</p>
     <p>“为什么会这样……不会吧，你！你是指挥帝国者吗！？”</p>
-    <p>“没办法啊……是啊，没办法啊。你可要恨我啊」</p>
+    <p>“没办法啊……是啊，没办法啊。你可不要恨我啊」</p>
     <p>弗雷德里克一边回避着吉克林德愤怒的视线，一边淡淡地说，</p>
     <p>“帝国正在考虑吸收奥尔克斯。如果发生战争，我们就没有胜算了吧。</p>
     <p>所以，我为了保护这个学园而和那些家伙联手……对不起。你只能为了这个学园牺牲自己”</p>
@@ -131,5 +130,5 @@
     <p>那个，是只有小东西能持(有)的吉克林德所害怕的执着和疯狂。</p>
     <p>可是听着话的另一人···什么都不觉得，踢破门进入中。</p>
     <p>“证言辛苦了。虽然是完全不能理解的主张，但是只有你才是敌人这件事，就这么清楚了”</p>
-    <p>这样说着，梅赛德斯用冰的眼睛盯着弗雷德里克。</p>
+    <p>这样说着，梅赛德斯用冰冷的眼睛盯着弗雷德里克。</p>
 </body>
