--- a/OEBPS/Text/c067.xhtml
+++ b/OEBPS/Text/c067.xhtml
@@ -15,13 +15,13 @@
     <p>恐怕从一开始就在房间外待机吧。</p>
     <p>首先，通过展示吉克林德来发布信息，然后再进入……原来如此，这手不错。</p>
     <p>从梅赛德斯自己的“证言辛苦”的发言来看，弗雷德里克认为这种预测不会有错误。</p>
-    <p>但是很浅……在心里嘲笑着说反正是孩子。</p>
+    <p>但是真是天真……在心里嘲笑着说反正是孩子。</p>
     <p>如果把教员放在房间外面那还好说，除了梅赛德斯以外没有其他人吧。</p>
     <p>那么，听到弗雷德里克证言的只有吉克林德和梅赛德斯，这两个人无论怎么主张，要将其捏碎是很容易的。</p>
     <p>话虽如此，就算把老师放在那里……实际上，在这所学校里工作的半数以上的教师都是弗雷德里克派。</p>
     <p>学园长的权限中赞同自己的人，或者不赞同也默认的人留在这个学园里。</p>
     <p>也就是说，现在的证言没有任何力量。</p>
-    <p>「呵呵，你这孩子真勇敢。但是最后关头很甜……那怎么能把我追到哪儿去」</p>
+    <p>「呵呵，你这孩子真勇敢。但是最后关头很天真……那怎么能把我追到哪儿去」</p>
     <p>虽然弗莱德里克一边嘲笑着，但是同时承认梅赛德斯是很麻烦的事情。</p>
     <p>年龄仅十二岁，一般来说是不值得警戒的。</p>
     <p>但是她已经显露头角，以长相和年龄来判断是愚者干的事。</p>
