--- a/OEBPS/Text/c072.xhtml
+++ b/OEBPS/Text/c072.xhtml
@@ -19,12 +19,12 @@
     <p>梅赛德斯がノコノコ出向いたところで、その場で捕まるか処刑されるかで終わりだ。まずロクな事にはならない。</p>
     <p>ならば取るべき手段は正攻法に非ず。無法には無法をもって返すのみだ。</p>
     <p>しかし相手は国だ。下手を打てばこちらも無事では済まないだろう。</p>
-    <p>一番いいのは誰にも見付からずに潜入してハンナとフェリックスを救い出して脱出する事だが、そんな隠密スキルは梅赛德斯にはない。</p>
+    <p>一番いいのは誰にも見付からずに潜入して汉娜と菲利克斯を救い出して脱出する事だが、そんな隠密スキルは梅赛德斯にはない。</p>
     <p>伝説の潜入用アイテムであるダンボールがあったとしても達成はまず不可能だろう。</p>
     <p>なので、秘密裏に入り込むという手段は選ばない。</p>
     <p>むしろその逆……いっそ、事を大きくしてしまおうと梅赛德斯は考えていた。</p>
     <p>派手な囮を用意して突撃させ、城と町を混乱させる。</p>
-    <p>その上でどさくさ紛れにフェリックス達を救出するのだ。</p>
+    <p>その上でどさくさ紛れに菲利克斯達を救出するのだ。</p>
     <p>幸いに、それに役立つ物はこちらにある。</p>
     <p>梅赛德斯はまず、ダンジョンに意識を向けてある魔物を量産させた。</p>
     <p>今回使う魔物の名は『キョセイズミ・オーク』といい、薄い本でお馴染みの歩く豚さんだ。</p>
@@ -66,11 +66,11 @@
     <p>（大丈夫かこの国……いや、ともかく今は成功を喜ぶべきか。</p>
     <p>オーク達が全滅するのにそう時間はかからないはず……早いところ、目的を達成しなくてはな）</p>
     <p>梅赛德斯はこれで城に侵入出来たが、本番はここからだ。</p>
-    <p>オークが全滅する前にフェリックス達を見付けて逃げなくてはならない。</p>
+    <p>オークが全滅する前に菲利克斯達を見付けて逃げなくてはならない。</p>
     <p>とりあえず、まず探すべきは地下だろうか。誰かを捕えておくならば地下牢というのは定番だ。</p>
     <p>そう考え、地下への階段を探して移動を開始した。</p>
     <p>*</p>
-    <p>結論から言えば梅赛德斯が当たりを付けた地下牢にフェリックスとハンナはいなかった。</p>
+    <p>結論から言えば梅赛德斯が当たりを付けた地下牢に菲利克斯と汉娜はいなかった。</p>
     <p>彼らが軟禁されているのは地下どころか、むしろ二階にある来客用の豪華な部屋だったのだ。</p>
     <p>無論脱出出来ないように窓は外側から封鎖され、入り口前には常に騎士が立っているが生活そのものに不便は強いられていない。</p>
     <p>風呂やトイレも室内にあるし、食べ物もしっかりと栄養のあるものが一日三食おやつ付きで配給されている。</p>
@@ -78,8 +78,8 @@
     <p>残念ながら梅赛德斯が向かっている地下牢にいるのは男囚人だけだ。</p>
     <p>「何か、外が騒がしいですね」</p>
     <p>「…………」</p>
-    <p>外の喧騒に違和感を感じたフェリックスが、やや緊張した声で言う。</p>
-    <p>今の彼を見てフェリックスであると一目で見抜ける者は果たして何人いるだろうか。</p>
+    <p>外の喧騒に違和感を感じた菲利克斯が、やや緊張した声で言う。</p>
+    <p>今の彼を見て菲利克斯であると一目で見抜ける者は果たして何人いるだろうか。</p>
     <p>少なくとも梅赛德斯では判別出来ないだろう。</p>
     <p>それもそのはずで、今ここにいるのは豊かな金髪カツラを腰まで伸ばした、白いドレスの美しい少女野郎だったからだ。</p>
     <p>ドレスは女帝から渡されたものであるが、悲しい程によく似合っていた。</p>
