--- a/OEBPS/Text/c079.xhtml
+++ b/OEBPS/Text/c079.xhtml
@@ -12,7 +12,7 @@
 <body>
     <h1>79. 譲渡の儀</h1>
     <p>女帝ベアトリクスを捕獲して去年からの一連の事件を終わらせた梅赛德斯は無事に日常へと戻っていた。</p>
-    <p>ベアトリクスをダンジョン内に閉じ込めている事はハンナにすら教えていない。どう考えても騒ぎにしかならない特大の爆弾だからだ。</p>
+    <p>ベアトリクスをダンジョン内に閉じ込めている事は汉娜にすら教えていない。どう考えても騒ぎにしかならない特大の爆弾だからだ。</p>
     <p>ましてや実質的に帝国の支配者になってしまったなどと、言えるわけがない。</p>
     <p>なので表向きは普段と変わらず、しかし裏では確実に状況は変わっていた。</p>
     <p>まず帝国は、オルクスから全面的に手を引いて今までと１８０度変わった和平路線で対談を進めているという。</p>
@@ -20,7 +20,7 @@
     <p>毎回手紙の文末に添えられた求愛の文章が鬱陶しい。</p>
     <p>また、偽ベアトリクスの計らいで梅赛德斯は彼女の友人という扱いになり、自由に帝国を出入り出来るようになった。</p>
     <p>これについて疑問を抱く者は意外にもなく、普段からベアトリクスがどれだけ自分の欲に忠実に振舞っているのかが分かる。</p>
-    <p>急な路線変更も梅赛德斯やジークリンデ、そしてフェリックス（女装）を気に入ったからで納得されてしまったらしい。もう駄目だあの国。</p>
+    <p>急な路線変更も梅赛德斯や吉克林德、そして菲利克斯（女装）を気に入ったからで納得されてしまったらしい。もう駄目だあの国。</p>
     <p>また、偽ベアトリクスに鉄扇を持たせてみたが魔物を出す事は出来なかった。</p>
     <p>血縁以上にベアトリクスに近いはずなのだが、クローンでは王剣は使えないらしい。</p>
     <p>どういう見分け方をしているのかは分からないが、神の技術か何かで本物とクローンを見分けているのだろう。</p>
