--- a/OEBPS/Text/c080.xhtml
+++ b/OEBPS/Text/c080.xhtml
@@ -38,7 +38,7 @@
     <p>だがそれでも攻略者はほとんど現れていない。何故か？</p>
     <p>――それだけ、打倒守護者が困難だという事だ。</p>
     <p>梅赛德斯のパーティーは、過剰戦力と言っていいレベルで強い。</p>
-    <p>ベンケイはかつてBランクのシーカー十二人で構成されたトライヌの護衛を壊滅させているし、シュフはベルンハルト邸の私兵を全滅させた上でフェリックスにも難なく勝利している。</p>
+    <p>ベンケイはかつてBランクのsaker十二人で構成されたトライヌの護衛を壊滅させているし、シュフはベルンハルト邸の私兵を全滅させた上で菲利克斯にも難なく勝利している。</p>
     <p>クロとピーコも十分に強力な魔物だ。</p>
     <p>そして彼等は捕獲した当時よりも力を増しており、梅赛德斯自身もまたそれらに勝利して捕獲するだけの実力がある。</p>
     <p>だがそれらを纏めて相手にしても圧倒するのが守護者だ。</p>
