--- a/OEBPS/Text/c081.xhtml
+++ b/OEBPS/Text/c081.xhtml
@@ -16,7 +16,7 @@
     <p>复制的魔物占植物系的大半,不过，很好地看的话恶魔系的魔物几体也能看见。</p>
     <p>恐怕这里是由植物系和恶魔系构成的迷宫吧。</p>
     <p>转了一会儿后，梅赛德斯抬起头一看，映出了男子等候的样子。</p>
-    <p>和图威尔夫一样身着白衣，戴着眼镜的男性。</p>
+    <p>和zwölf一样身着白衣，戴着眼镜的男性。</p>
     <p>外表年龄大概三十多岁吧。虽然还保留着青春活力，但相反，头顶上的毛发却越来越稀薄，这引起了人们的悲哀。</p>
     <p>恐怕和zuverufu一样，模仿着人类的谁的身姿被后世留下了这样的身姿的原创可悲。</p>
     <p>“你是这个迷宫的管理者吗？”</p>
@@ -109,7 +109,7 @@
     <p>过火的科学的末路。</p>
     <p>听到这话使梅赛德斯有些犹豫。</p>
     <p>即使这样，前世也是人类。虽然不是很喜欢这个世界，但即使如此，如果前方因为黑暗而封闭着的话，我也并不想知道。</p>
-    <p>但是必须知道。梅赛德斯下定决心，催促他先跟图威尔夫说话。</p>
+    <p>但是必须知道。梅赛德斯下定决心，催促他先跟zwölf说话。</p>
     <p>“怎么了？”</p>
     <p>“只有持续使用的头部异常发达，不用的手脚退化收缩了。</p>
     <p>眼睛、鼻子、嘴巴，不使用的部分全部恶化，失去了意义……其身姿是巨大的头部，BOSS们看到后就变成了魔物”</p>
