--- a/OEBPS/Text/c082.xhtml
+++ b/OEBPS/Text/c082.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>82. 进化的死胡同</h1>
-    <p>图威尔夫继续说。</p>
+    <p>zwölf继续说。</p>
     <p>从她口中说出的是无限接近神的生物的末路。</p>
     <p>“众神越是荣华，作为生物失去了什么。</p>
     <p>制造可能生病的人工内脏器官，在出生的同时将体内的内脏器官全部换掉……经过几代人的反复，最终出现了一个没有体内主要内脏器官的畸形儿，但是随着科学的进步，这些畸形儿也得以生存并留下孩子，并与下一代相连。</p>
@@ -65,7 +65,7 @@
     <p>“但是你并没有感到惊讶。也就是说……记忆力是能够预测到的事态吧？”</p>
     <p>“好的。是被预测的事态，数虽然少但是几个人现在也应该存在。然后从今以后也会出生的吧」</p>
     <p>转生者……不是不规则的。</p>
-    <p>至少从诸神和图威尔夫看的话是能预测的范围内的事，并且据说现在也有数人。</p>
+    <p>至少从诸神和zwölf看的话是能预测的范围内的事，并且据说现在也有数人。</p>
     <p>自己作为人类的继任者被制造了的事实也好，怎么也不讨厌的预感。</p>
     <p>因为还没有给出答案，所以不能说什么，但是脑海中只浮现出讨厌的想象。</p>
     <p>“像我这样的有记忆的存在，和众神创造我们没有关系吧？”</p>
@@ -83,7 +83,7 @@
     <p>最可怕的是，现在在这里的自己其实不是自己。</p>
     <p>据说神为了让游戏中的角色移动，将克隆作为外置的终端来运作。</p>
     <p>那么，哪里都没有自己不是这样的保证。</p>
-    <p>但是，图威尔夫断言和那个不一样。</p>
+    <p>但是，zwölf断言和那个不一样。</p>
     <p>“我还不能多说。为了说那个……请将所有的迷宫都收入手中。那时候我才能向你坦白这个世界的真实”</p>
     <p>“也就是说，和至今为止做的事情是不会变的。”</p>
     <p>《是》</p>
@@ -96,9 +96,9 @@
     <p>在等待着不是很棒的东西吧，不要紧吧。反正不能后退。</p>
     <p>只是，只有冲刺。</p>
     <p>“好吧。我称霸迷宫。</p>
-    <p>到最后来吧，图威尔夫”</p>
+    <p>到最后来吧，zwölf”</p>
     <p>“YES，我的主人”</p>
-    <p>听到对图威尔夫的回答，梅赛德斯将danjon变成了钥匙后收起来。</p>
+    <p>听到对zwölf的回答，梅赛德斯将danjon变成了钥匙后收起来。</p>
     <p>这个迷宫有两个。</p>
     <p>如果要确保这个以上的迷宫的话，要到别的国家去吗……或者，只有打倒实践地牢的持有者的二选择。</p>
     <p>也就是说，终于到了该来的时候了。</p>
