--- a/OEBPS/Text/c087.xhtml
+++ b/OEBPS/Text/c087.xhtml
@@ -52,7 +52,7 @@
     <p>イザークに任せたままでは国は腐る一方で帝国にも対抗出来ない。</p>
     <p>ならば一か八か、別の王に挿げ替えてしまった方がまだマシになるかもしれない。</p>
     <p>少なくとも王剣を使えないイザークよりはいいだろう。そう考えてもおかしくはなかった。</p>
-    <p>「しかし状況は変わりました。イザークは貴方達によって倒され、真の後継者であるジークリンデ殿下もおられる。</p>
+    <p>「しかし状況は変わりました。イザークは貴方達によって倒され、真の後継者である吉克林德殿下もおられる。</p>
     <p>しかし一度協力した手前、今更抜けますとも言えずに……というより、私は少々彼らの秘密を知りすぎましたので、そんな事をすれば消されてしまうでしょう」</p>
     <p>「つまり抜ける機会を失ったわけか」</p>
     <p>「はい……お恥ずかしい話ですが」</p>
@@ -65,24 +65,24 @@
     <p>「はい。むしろ私としてはあの派閥が潰れた方が都合がよいのです。</p>
     <p>出資者と先程言いましたが、実態は何の見返りもなく一方的に搾取されているようなものですので……」</p>
     <p>「貴方と同じような者は他にもいるのか？」</p>
-    <p>「ええ、何人かいます。しかし全てがそうというわけではなく、中にはジークリンデ殿下とマックス君をくっつけて早急に王を用意するべきだと考える者もいます」</p>
+    <p>「ええ、何人かいます。しかし全てがそうというわけではなく、中には吉克林德殿下とマックス君をくっつけて早急に王を用意するべきだと考える者もいます」</p>
     <p>トライヌの言葉を聞き、梅赛德斯はそれも当然か、と考えた。</p>
     <p>その者達の考えを責める事は出来ない。</p>
     <p>むしろ真っ当だ。国の事を真剣に考えている。</p>
     <p>何故なら今、この国には……オルクスには、王がいないのだ。</p>
-    <p>ジークリンデは正当な王女である。</p>
+    <p>吉克林德は正当な王女である。</p>
     <p>だが王女であって女王ではない。女王になる事もない。</p>
     <p>何故ならオルクスでは国のトップに就くのは男であると決まっているからだ。</p>
-    <p>だからジークリンデの母も女王になる事はなく、それがイザークという愚者を王家に招き入れる結果に繋がった。</p>
+    <p>だから吉克林德の母も女王になる事はなく、それがイザークという愚者を王家に招き入れる結果に繋がった。</p>
     <p>そこに特別な理由はない。ただの風習で、伝統で、そして固定観念だ。</p>
     <p>あえて言うならば女性は男性よりも感情で物を考えるのでトップには向かないという事だろうか。</p>
     <p>だから今、オルクスは国王不在という極めて不安定な状態にある。</p>
-    <p>そしてそれは、ジークリンデが結婚して夫を得るまで変わる事はない。</p>
+    <p>そしてそれは、吉克林德が結婚して夫を得るまで変わる事はない。</p>
     <p>「女王制度は……まあ隣国を見れば貴族達の反対を受けるか」</p>
-    <p>「はい。帝国のように女尊男卑社会にされてはたまったものではありません。貴族達もそれを恐れてジークリンデ殿下の即位には反対するでしょう。</p>
+    <p>「はい。帝国のように女尊男卑社会にされてはたまったものではありません。貴族達もそれを恐れて吉克林德殿下の即位には反対するでしょう。</p>
     <p>私自身も、どちらかと言えば殿下は国王になるには向いてないかと……」</p>
     <p>トライヌの言葉に梅赛德斯は特に何も言わない。</p>
-    <p>ジークリンデがトップに不向きな事には同意しているからだ。</p>
+    <p>吉克林德がトップに不向きな事には同意しているからだ。</p>
     <p>她的确是个好人，很温柔的人物。</p>
     <p>但是好人不能等于下正确的判断。</p>
     <p>相反，站在首位的人有时为了救9而对1视而不见，这种无情的要求也是必要的。</p>
