--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -27,7 +27,7 @@
     <p>在这种情景面前，菲利克斯只是茫然的。</p>
     <p>啊，我是迷宫所有者？那是什么？</p>
     <p>或许是考虑过那种事情吧，现在已经心不在焉了。</p>
-    <p>此外还有以琉迪亚为首的伯恩哈特的妻子们、孩子们……梅赛德斯、莫尼卡、马尔吉特……并且菲利克斯和影子薄的上帝弗利特。</p>
+    <p>此外还有以琉迪亚为首的伯恩哈特的妻子们、孩子们……梅赛德斯、莫尼卡、玛吉特……并且菲利克斯和影子薄的上帝弗利特。</p>
     <p>全体人员到齐，注视着事的趋势。</p>
     <p>“总觉得事情很复杂啊……。</p>
     <p>但是，我同意了。瓦尔堡加拼命的态度是为了保护住所而拼命的呢”</p>
