--- a/OEBPS/Text/c097.xhtml
+++ b/OEBPS/Text/c097.xhtml
@@ -27,7 +27,7 @@
     <p>如果遭遇这样不讲理的事情，人们会在无意识中寻找愤怒的解决方法。</p>
     <p>吸血鬼虽然不是人类，但那种心态与人类没有太大差别。</p>
     <p>「啊，你知道吗？只在这里说……这个袭击，据说是公主大人做的”</p>
-    <p>「哈？你在说什么呢？听到那种事，我就不敬罪被逮捕了”</p>
+    <p>「哈？你在说什么呢？听到那种事，我就要因为不敬罪被逮捕了”</p>
     <p>“所以说只是在这里说的话。刚才我听到了贵族大人在对面讲话。什么都可以，只有王族才能使用的剑好像是把迷宫关起来的……好像可以自由地召唤魔物哦」</p>
     <p>“魔物自在……这么说来，突然出现在王都中……”</p>
     <p>人嘴是封不住的。</p>
@@ -69,7 +69,7 @@
     <p>但是迷宫也不是万能的。不愧是没有能将这种状态颠倒的魔鬼。</p>
     <p>“手是有的”</p>
     <p>但是，被只有梅赛德斯才能听到的声音从迷宫内传来了建议。</p>
-    <p>这么说来，Melsedes想起来，如果把迷宫当作自己的话，一定有比自己更习惯的家伙吧，然后把他叫到外面来。</p>
+    <p>这么说来，梅赛德斯想起来，如果把迷宫当作自己的话，一定有比自己更习惯的家伙吧，然后把他叫到外面来。</p>
     <p>那是久违的出场的帝国女帝贝阿朵里克斯。</p>
     <p>“恩，好久没在外面的空气很好吃！并且隔了好久看的主殿仍旧可爱。</p>
     <p>汉娜也丝毫没有改变，这比什么都好”</p>
@@ -131,7 +131,7 @@
     <p>不，不……在！一个人！很可能干的笨蛋……啊！</p>
     <p>尤利亚……啊！）</p>
     <p>为了尤利亚的名誉，她这次真是冤枉。</p>
-    <p>那个铠甲的魔物，是Melsedes将被活捉的魔物放入迷宫登记·复制的复制体。</p>
+    <p>那个铠甲的魔物，是梅赛德斯将被活捉的魔物放入迷宫登记·复制的复制体。</p>
     <p>但是，只有攻略者才能做到这样的事，罗勒的思考并不适合。</p>
     <p>他的思考是站在自己一边的麻烦人……他朝着尤利亚失控的方向走去。</p>
     <p>以眼还眼，疑神疑鬼则疑神疑鬼。</p>
