--- a/OEBPS/Text/c099.xhtml
+++ b/OEBPS/Text/c099.xhtml
@@ -126,7 +126,7 @@
     <p>还有，在迷宫里还有其他被囚禁的可怜的孩子们，不推荐任由愤怒来攻击我”</p>
     <p>“做了很过分的事情。我跟这些孩子相识也算不了什么……如果就这样不管攻击的话怎么办？”</p>
     <p>汉娜对罗勒露出若干愤怒询问。</p>
-    <p>因为她也有甜的部分，这样的手段不太好吧。</p>
+    <p>因为她也有天真的部分，这样的手段不太好吧。</p>
     <p>如果还需要的话就做吧……如果可以的话我会想帮助你的。</p>
     <p>另一方面，梅赛德斯，因为想在这里逃跑的话人质象告诉有效一样的东西不管攻击。</p>
     <p>如果进展顺利的话，在人质被杀之前就能够完成任务。</p>
