--- a/OEBPS/Text/c111.xhtml
+++ b/OEBPS/Text/c111.xhtml
@@ -54,8 +54,8 @@
     <p>动作-----9495;</p>
     <p>※尽头的墙壁就像电视画面一样，映照着下一条通道。</p>
     <p>这样的话，即使在有限的空间也可以进行“持续前进的强制横滚动”。</p>
-    <p>梅赛德思索到这个地步，向图威尔夫打了招呼。</p>
-    <p>（图威尔夫。从迷宫的扩展功能中给我查看陷阱的项目。</p>
+    <p>梅赛德思索到这个地步，向zwölf打了招呼。</p>
+    <p>（zwölf。从迷宫的扩展功能中给我查看陷阱的项目。</p>
     <p>《好的，主人》</p>
     <p>迷宫是重点……使用取用的马纳能量产怪物和扩大地图。</p>
     <p>并且面积的扩张由于使用1P增加1格的事能，1格的宽度是纵横1米。</p>
