--- a/OEBPS/Text/c116.xhtml
+++ b/OEBPS/Text/c116.xhtml
@@ -18,7 +18,7 @@
     <p>次に、かつて裏からオルクスにちょっかいをかけていたベアトリクス帝国が所有していたダンジョン。</p>
     <p>こちらは女帝ベアトリクスが用いていた事もあって、『帝国ダンジョン』と呼んでいる。</p>
     <p>植物系の魔物をメインとするダンジョンだが、ベーゼデーモンのシュフや、アシュタールのピーコなどの出身ダンジョンでもあるので、植物系しかいないというわけではない。</p>
-    <p>この二つが現在梅赛德斯が所有しているダンジョンであり、他に所在が判明しているのはベルンハルトが（多分）所有しているプラクティスダンジョン。ジークリンデが所有している王剣。そして複雑なお家問題の末に兄フェリックスの手に渡った『真の王派』が所有していたダンジョンの三つだ。</p>
+    <p>この二つが現在梅赛德斯が所有しているダンジョンであり、他に所在が判明しているのはベルンハルトが（多分）所有しているプラクティスダンジョン。吉克林德が所有している王剣。そして複雑なお家問題の末に兄菲利克斯の手に渡った『真の王派』が所有していたダンジョンの三つだ。</p>
     <p>この『真の王』問題の際に梅赛德斯が事の成り行きで預かる事になってしまったのが、他でもない真の王として祭り上げられていた哀れな少年マックス・ファイトと、腕は確かだが頭が残念な隠密のユリアという女である。</p>
     <p>梅赛德斯はこの二人の教育をベンケイに任せ、今まで放置していた。</p>
     <p>だが、そろそろ少しはマシになっている頃かと考え、様子を見る事にしたのだ。</p>
