--- a/OEBPS/Text/c012.xhtml
+++ b/OEBPS/Text/c012.xhtml
@@ -82,14 +82,14 @@
     <p>因为活着是有害的，所以要打倒。倒下后骨头变成装饰品和装备。肉是食物。而且如果皮变成羊皮纸的话，就用羊皮纸。</p>
     <p>魔物对这个世界的人们来说是害兽，同时也是某种意义上必须存在的存在。</p>
     <p>「好了」</p>
-    <p>收到了马尔吉特画完的纸，梅赛德斯大为惊叹。</p>
+    <p>收到了玛吉特画完的纸，梅赛德斯大为惊叹。</p>
     <p>那里描绘的是梅赛德斯。</p>
     <p>而且在一眼就能看出自己被描绘出来的程度上抓住了特征，非常擅长。</p>
     <p>梅赛德斯一边看画一边思考。以前在行会上看到委托书的时候，想要易懂的画或者照片。</p>
     <p>而且行会想要地牢的信息，甚至要把地牢的映射作为委托。</p>
     <p>还有一个。梅赛德斯在读家里的魔物书……与其这么说，不如说是看了各种各样的书才注意到的事情，但不知为何这个世界上的书完全没有画。</p>
     <p>「……首先是情报收集。去一次行会吧」</p>
-    <p>◆</p>
+    <p class="divline"></p>
     <p>「在书上画画儿？这么说来没怎么见过呢……为什么呢？</p>
     <p>嗯，硬要说的话，书是读文字的东西。也许是因为觉得画是描绘风景和人物的东西吧。</p>
     <p>奇怪地分开住了呢。那大概是理由吧。</p>
