--- a/OEBPS/Text/c043.xhtml
+++ b/OEBPS/Text/c043.xhtml
@@ -13,13 +13,13 @@
     <p>しかし、まだ完全に学業の邪魔になる連中を排除出来たわけではない。</p>
     <p>暗殺者連中に襲撃のタイミングを知らせていた内通者は未だ誰だか判明しておらず、不安の種が学園内に残ってしまっている。</p>
     <p>これを見付けだして始末しない限り、本当の平穏は戻って来ないだろう。</p>
-    <p>ジークリンデはこのまま城で暮らすかと思っていたが、何と彼女は己の性別と境遇を皆に明かした上で学園に留まってしまった。</p>
+    <p>吉克林德はこのまま城で暮らすかと思っていたが、何と彼女は己の性別と境遇を皆に明かした上で学園に留まってしまった。</p>
     <p>これには彼女のファンだった女生徒全員が驚き、ドードに至っては失神までした。</p>
     <p>しかし一部から『キマシタワー！』というやたらハイテンションな声があがったのが気になる。</p>
     <p>モニカの同類だろうか？</p>
-    <p>また、ジークリンデの正体判明と同時に学園の警備が強化され、常に学園内を兵士が巡回するようになった。</p>
+    <p>また、吉克林德の正体判明と同時に学園の警備が強化され、常に学園内を兵士が巡回するようになった。</p>
     <p>無論全員、ベルンハルトの息がかかった兵士だ。</p>
-    <p>梅赛德斯としては、内通者がまだ残っている上にいつ暗殺者が出るか分からない学園よりも城でジークリンデを守るべきだろうと思うのだが、これに対しベルンハルトはこう答えた。</p>
+    <p>梅赛德斯としては、内通者がまだ残っている上にいつ暗殺者が出るか分からない学園よりも城で吉克林德を守るべきだろうと思うのだが、これに対しベルンハルトはこう答えた。</p>
     <p>「城にはまだ、イザークについて甘い汁を吸っていたカス共が紛れている。他国の間者も何人かいるだろう。</p>
     <p>全て洗い出し、粛清するまでは王女を置くのはかえって危険だ。まだ学園の方がマシだろう」</p>
     <p>要約すると、粛清の嵐を吹かして邪魔な貴族を一掃し、自分が今以上の権力を握るのに王女が邪魔だからしばらく学園に隔離したいという事だ。</p>
@@ -32,43 +32,43 @@
     <p>当然生徒達の興味と好奇の視線を勝ち取ってしまい、親の命令なのかそれとも本人の判断なのかは知らないが、やたら擦り寄って来る連中が増えてしまった。</p>
     <p>「ねえメルちゃん、メルちゃんは狩猟祭出る？」</p>
     <p>「まあ、一応参加してみますが……それより何故、貴方がまだ学園にいるかが気になります、伯母様」</p>
-    <p>「もー！敬語固いって！前までと同じでハンナちゃんって呼んでくれていいんだよ」</p>
+    <p>「もー！敬語固いって！前までと同じで汉娜ちゃんって呼んでくれていいんだよ」</p>
     <p>「そうか。なら敬語は外そう、おばさん」</p>
     <p>「おばさん呼びはやめて！？」</p>
     <p>夏には狩猟祭というイベントがある。</p>
-    <p>それに参加するかどうかを聞いて来るのは、何故かまだ学園に留まっているハンナ・バーガー（１０７歳。子持ち）だ。</p>
+    <p>それに参加するかどうかを聞いて来るのは、何故かまだ学園に留まっている汉娜・バーガー（１０７歳。子持ち）だ。</p>
     <p>「で、何故まだいるんだ？」</p>
     <p>「んー……メルちゃんも言ってたでしょ？まだ内通者がいるって。</p>
     <p>それを捕まえるのが今の私の仕事なのよ。それと王女様の護衛の指揮も私がとってるしね」</p>
     <p>「……生徒に変装する必要は？」</p>
     <p>「生徒として潜入する方が近くにいれるし、色々と見えるものもあるのよ。</p>
     <p>それに似合ってるでしょ？」</p>
-    <p>そう言い、ハンナはきゃるんとポーズを取った。</p>
+    <p>そう言い、汉娜はきゃるんとポーズを取った。</p>
     <p>「無理するなおばさん」</p>
     <p>「！？」</p>
     <p>しかしこの塩対応である。</p>
-    <p>ハンナは少し泣いた。</p>
+    <p>汉娜は少し泣いた。</p>
     <p>「はあー……メルちゃんって見た目は可愛らしいのに、中身は女の子版ベルンハルトって感じだよねえ。気に入られるのも分かるわ」</p>
-    <p>「いくら気に入られようが、用が済んだら当主の座などフェリックスに押し付けてさっさと出て行くがな」</p>
-    <p>「フェリックス君ねえ……まあ、真面目な子だし頑張ってはいるんだけどね」</p>
-    <p>今はここにいないフェリックスの事を思い浮かべ、ハンナは顔をしかめた。</p>
+    <p>「いくら気に入られようが、用が済んだら当主の座など菲利克斯に押し付けてさっさと出て行くがな」</p>
+    <p>「菲利克斯君ねえ……まあ、真面目な子だし頑張ってはいるんだけどね」</p>
+    <p>今はここにいない菲利克斯の事を思い浮かべ、汉娜は顔をしかめた。</p>
     <p>通常、貴族の家督というものは長男が継ぐものだ。それがこの国の常識である。</p>
     <p>しかしそこは常識など踏み越えるのが当然のベルンハルト。しきたりになど縛られない。</p>
     <p>彼は彼自身の判断こそを最上と考えるが故に、周囲の反対も常識も無視して梅赛德斯を跡目につかせる気でいる。</p>
-    <p>ハンナはそれが分かっているからこそ、フェリックスを不憫に思ったのだ。</p>
+    <p>汉娜はそれが分かっているからこそ、菲利克斯を不憫に思ったのだ。</p>
     <p>「何か、ベルンハルトを認めさせるような手柄でも上げれば話は違うんだけどね」</p>
     <p>「手柄、か……」</p>
-    <p>梅赛德斯としてもフェリックスがぞんざいに扱われている現状はあまりいいものではない。</p>
-    <p>可哀想だとかそういう感情は抱かないし、割とどうでもいいのだがフェリックスが評価されないと本当にこちらに跡継ぎが押し付けられてしまう。</p>
-    <p>無論逃げるつもりではあるが、一番丸く収まるのはやはりフェリックスに押し付けて行く事だ。</p>
-    <p>そういう点で言えばフェリックスがある程度ベルンハルトに認められている方がいい。</p>
+    <p>梅赛德斯としても菲利克斯がぞんざいに扱われている現状はあまりいいものではない。</p>
+    <p>可哀想だとかそういう感情は抱かないし、割とどうでもいいのだが菲利克斯が評価されないと本当にこちらに跡継ぎが押し付けられてしまう。</p>
+    <p>無論逃げるつもりではあるが、一番丸く収まるのはやはり菲利克斯に押し付けて行く事だ。</p>
+    <p>そういう点で言えば菲利克斯がある程度ベルンハルトに認められている方がいい。</p>
     <p>しかしだからといって狩猟祭の優勝を譲ってやっても意味はないだろうし、そんな事をしても普通にベルンハルトにバレる。</p>
     <p>それにたかが学園のイベントで一位を取ったくらいであの男が評価を変えるとも考えにくい。</p>
     <p>もっと大きな、無視出来ない手柄をあげさせれば楽なのだが……。</p>
     <p>「考えておこう」</p>
     <p>今は特にこれといって思い付かない。</p>
     <p>梅赛德斯は話を打ち切り、机の上に羊皮紙を広げて自習にとりかかった。</p>
-    <p>◆</p>
+    <p class="divline"></p>
     <p class="divline"></p>
     <p>狩猎节前还有一个活动。</p>
     <p>那是前几天上课时捕获的魔物们进行的模拟战。</p>
