--- a/OEBPS/Text/c071.xhtml
+++ b/OEBPS/Text/c071.xhtml
@@ -53,7 +53,7 @@
     <p>中には女性兵がおり、装備も門番の二人と比べてかなり上質なものを着けている。</p>
     <p>「すまないが、これも規則でな。何か危険な物を所持していないか調べる必要がある。</p>
     <p>悪いが服を脱いでくれ。ああ、男共は外させるから心配するな」</p>
-    <p>「武器を持っているが、これはどうなる？　シーカーとしての必需品なのだが」</p>
+    <p>「武器を持っているが、これはどうなる？　sakerとしての必需品なのだが」</p>
     <p>「それは問題ない。検査対象になるのはもっと別の物だ。</p>
     <p>例えば爆弾だとか、取引を禁止されている薬物だとか……そういうのを持っているような輩は通す事は出来ん」</p>
     <p>大都市を守る上では当然の措置か。</p>
@@ -79,17 +79,17 @@
     <p>何か様子がおかしい。</p>
     <p>梅赛德斯は先ほどの自分への対応と、男への対応に差がある気がしてしばらくその場で見物する事にした。</p>
     <p>もしやあの男は前科持ちか何かなのだろうか。</p>
-    <p>「ま、待ってくれ！　それは護身用だ！　それに俺はシーカーだ、武器がなきゃ話にならん！」</p>
+    <p>「ま、待ってくれ！　それは護身用だ！　それに俺はsakerだ、武器がなきゃ話にならん！」</p>
     <p>「これも規則だ。嫌ならば都市に入るのを諦めろ」</p>
     <p>「あ、後で返してくれるんだよな！？」</p>
     <p>「返すわけがなかろう。返した途端に襲ってくる可能性もあるのだからな」</p>
     <p>「あ、あんまりだ！　俺が何をしたってんだ！」</p>
     <p>「何も。ただこれが規則だ。嫌なら嫌で別にいい、さっさと立ち去るがよい」</p>
     <p>どうやら別に前科持ちだから厳しいわけではないらしい。</p>
-    <p>では何だろう？　シーカーのランクだろうか。</p>
+    <p>では何だろう？　sakerのランクだろうか。</p>
     <p>あり得る話だ。ランクの低い者は信用がない。ただのチンピラがとりあえず登録しただけという可能性もあるのだ。</p>
     <p>しかしそれも、男の言葉で否定されてしまった。</p>
-    <p>「俺はランクＣのシーカーだ！　身元はギルドが保証してくれている！</p>
+    <p>「俺はランクＣのsakerだ！　身元はギルドが保証してくれている！</p>
     <p>問題なんか起こすわけねえだろう！」</p>
     <p>「そう言う奴に限って問題を起こすのだ」</p>
     <p>「そ、そんな……待てよ！　そいつ！　そいつ武器持ってるじゃねーか！」</p>
@@ -102,7 +102,7 @@
     <p>「ちくしょう！」</p>
     <p>これは酷い。</p>
     <p>明らかな性差別だ。あの女性兵の装備といい、門番として男の兵が立たされている事といい、どうもこの都市は女の方が立場が強いようだ。</p>
-    <p>これはいよいよもって、フェリックスの身が危険だ……そう思いながら梅赛德斯は門を通過して都市へと足を踏み入れた。</p>
+    <p>これはいよいよもって、菲利克斯の身が危険だ……そう思いながら梅赛德斯は門を通過して都市へと足を踏み入れた。</p>
     <p>立ち並ぶ建築物は割と高い建築技術で造られているようで、大半が煉瓦製だ。</p>
     <p>四角に固めたブロックを積み上げて造るタイプだな。</p>
     <p>窓は豪華にも硝子が張られていて、中世文化という事を考えればどこも裕福層であると見ていい。</p>
@@ -119,13 +119,13 @@
     <p>そんな男達が数人行き来しており、梅赛德斯と目が合うと逃げるようにそそくさと立ち去って行く。</p>
     <p>（門の前でもそうだったが、これは……）</p>
     <p>どうやら、この国は完全な女性社会というわけだ。</p>
-    <p>梅赛德斯は呆れたように溜息を吐き、とりあえずどうやって城に忍び込んでフェリックス達を助けるかを考え始めた。</p>
-    <p>Ｃランクシーカー「男は何もつけるなという事だな……了解した！　これより全裸で帝都に入る！」</p>
+    <p>梅赛德斯は呆れたように溜息を吐き、とりあえずどうやって城に忍び込んで菲利克斯達を助けるかを考え始めた。</p>
+    <p>Ｃランクsaker「男は何もつけるなという事だな……了解した！　これより全裸で帝都に入る！」</p>
     <p>女性兵「ファッ！？　ま、まて！　何故そうなる！」</p>
     <p class="divline"></p>
-    <p>Ｃランクシーカー「危険なものは没収すると言ったのはそちらだ。ならばこその全裸！　これならば危険物などどこにもない」</p>
+    <p>Ｃランクsaker「危険なものは没収すると言ったのはそちらだ。ならばこその全裸！　これならば危険物などどこにもない」</p>
     <p>女性兵「いや、確かにそうだが……！」</p>
     <p>Ｃランク「いざ帝都へ！」</p>
     <p>女性兵「ヤメロォ！」</p>
-    <p>足止めされていたＣランクシーカーさんも無事に帝都に（全裸で）入れたようです。</p>
+    <p>足止めされていたＣランクsakerさんも無事に帝都に（全裸で）入れたようです。</p>
 </body>
