--- a/OEBPS/Text/c083.xhtml
+++ b/OEBPS/Text/c083.xhtml
@@ -12,14 +12,13 @@
 <body>
     <h1>83. 改变者、不变的人</h1>
     <p>夺取了贝阿特里克斯的迷宫之后，五年的岁月很快流逝了。 梅赛德斯也十七岁了，离学园毕业只剩下一年了。 去年，吉克林德迎来了不老期，在少女与成年女性的交界线这一最好的地方外表被固定下来。</p>
-    <p>她的随年纪增长比较大的胸部现在每次走路都会摇晃，胸前像挂着两个哈密瓜。 每当她走路的时候，周围的男生都会目不转睛地盯着她。 虽然觉得那样摇晃也无所谓，但是作为中世纪文明的吸血鬼的国家里却没有胸罩。
-    <p> 虽然有支撑着胸部的内衣，但是没有现代日本那么坚固。</p>
-    </p>
+    <p>她的随年纪增长比较大的胸部现在每次走路都会摇晃，胸前像挂着两个哈密瓜。 每当她走路的时候，周围的男生都会目不转睛地盯着她。 虽然觉得那样摇晃也无所谓，但是作为中世纪文明的吸血鬼的国家里却没有胸罩。</p>
+    <p>虽然有支撑着胸部的内衣，但是没有现代日本那么坚固。</p>
     <p>因为基本上没有吸血鬼的胸部下垂的事。 库珀韧带结实地能着，即使切断也再生了。 所以今天吉克林德的胸部也摇摆不定。 菲利克斯二十岁进入不老期，几乎在肉体全盛期被固定下来。作为男人，这是理想的不老期吧。</p>
     <p>因为有稍微与弗雷德里克相似的部分不老期访问的可能性也担心,不过，好象平安地年轻人的那样时间停下了。 现在学园毕业，在格鲁内瓦特宅邸努力学习，但仍无法看清伯恩哈特。
     <p> 但是，女帝贝阿朵里克斯（影武者）把她当作朋友看待，或许是因为她认为伯恩哈特也有利用价值，至今仍未被抛弃。</p>
     </p>
-    <p>到了十六岁的莫尼卡和马尔吉特在学园入学后顺利地提高了成绩，从外表上看，她已经成长为期待将来的美女。 以前战战兢兢的玛吉特成长为文静的大小姐，在男生中躲藏的粉丝很多。 虽然没有吉克林德那么大，但是胸很大也是受欢迎的理由之一吧。
+    <p>到了十六岁的莫尼卡和玛吉特在学园入学后顺利地提高了成绩，从外表上看，她已经成长为期待将来的美女。 以前战战兢兢的玛吉特成长为文静的大小姐，在男生中躲藏的粉丝很多。 虽然没有吉克林德那么大，但是胸很大也是受欢迎的理由之一吧。
     </p>
     <p>莫尼卡是苗条系的美人，从以前开始就不变的纵横卷是魅力点。 现在比梅赛德斯还大的两人，至今仍将梅赛德斯当作姐姐来仰慕。 然后梅赛德斯——没有变化。 没有变化。一切都没变。 一直以来就是不变的身材了。
     <p> 虽然有讨厌的预感，但是完全中了。</p>
@@ -34,17 +33,17 @@
     <p> 另外，帝国方面虽然承诺让学园继续存在，但是那个处理预定着拉开所有女生的间的距离。</p>
     </p>
     <p>这是向贝阿朵里克斯本人确定的，没错。 因此，学园，悲哀地正常继续运转。</p>
-    <p>◆</p>
-    <p>その日の学園の授業が終わり、梅赛德斯は王都内を歩いていた。</p>
-    <p>これから向かうのはダンジョンで、つまりはシーカーとしての仕事だ。</p>
-    <p>あれから五年が経った今、梅赛德斯のシーカーランクはBにまで上昇していた。</p>
+    <p class="divline"></p>
+    <p>当天的学校课程结束、梅赛德斯在王都内走路时。</p>
+    <p>これから向かうのはダンジョンで、つまりはsakerとしての仕事だ。</p>
+    <p>从那以后已经过了五年、梅赛德斯的saker等级已经升到B了。</p>
     <p>これでも一応自重して、最低限の仕事に留めているのだがそれでも上がるものだ。</p>
     <p>そして逆に仕事をしなければランクは下がっていくので、定期的に何か仕事を取らなければならない。</p>
     <p>しかし梅赛德斯はプラクティスダンジョンに行くのはあまり乗り気ではなかった。</p>
     <p>というのも、以前は十五階層までしかなかったはずなのに、二回目以降は十八階層まで増えていたからだ。</p>
     <p>かといって、ダンジョンの階層が増えたならばもっと話題になっていいはずなのに誰もその話を出さないし、さり気なく聞いても『プラクティスダンジョンは十五階層だろう』という答えが返ってくるのみだ。</p>
     <p>つまり……梅赛德斯のみに対して階層が解放されているという事であり、これに梅赛德斯は警戒心を抱いた。</p>
-    <p>あのダンジョンの持ち主は、父でほぼ確定だ。</p>
+    <p>那个迷宫已经能确定是父亲的所有物了。</p>
     <p>そこで戦うという事はこちらの手札を見せるという事であり、弱い魔物ならばともかく強い魔物相手ならばこちらも札を切らざるを得なくなる。</p>
     <p>恐らく父はそれを狙って階層を広げ、こちらの札を見ようとしているのではないだろうか。</p>
     <p>そう考えてからは、なるべくダンジョンに潜る頻度を減らし、深く入らないようにした。</p>
@@ -60,7 +59,7 @@
     <p>姿は見えないが、他にも数人隠れているだろう。</p>
     <p>わざと普段は通らないような道も通ってみたが、彼等はそれでもいなくならないので確定と考えていい。</p>
     <p>待ち伏せして潰すのは容易だが……現状ではまだ敵か味方か分からない。</p>
-    <p>以前のハンナの例もあるし、まずは話を聞いておくべきか。</p>
+    <p>以前の汉娜の例もあるし、まずは話を聞いておくべきか。</p>
     <p>なので梅赛德斯は近くの宿屋へと入り、一階の酒場で適当にパンとワインを注文して奥の席へと座った。</p>
     <p>この国で外食をしようと思うならば、宿屋に行くしかない。</p>
     <p>宿屋は大体酒場とセットになっていて、そこで簡単な食事を頼む事が出来る。</p>
@@ -85,19 +84,19 @@
     <p>話しながらパンを噛み切った。</p>
     <p>硬い。やはりこの国のパンは基本的にスープがないと食べられたものではなかった。</p>
     <p>なので客は自動的に別料金でスープを頼み、店は潤う。</p>
-    <p>「梅赛德斯・グリューネヴァルト様。この国の真の王が貴方の才覚を必要としています。</p>
+    <p>「梅赛德斯・格鲁内瓦特様。这个国家的真正国王需要您的才能。</p>
     <p>どうか我々の同志になって頂きたい」</p>
     <p>「…………」</p>
     <p>梅赛德斯は返事をせず、無言でワインを飲んだ。</p>
     <p>話を聞かない事には肯定も否定も出来ない。</p>
-    <p>しかしどうやら……また面倒な事になりそうだ、と思い溜息を吐きたくなった。</p>
+    <p>不过看样子……又是麻烦事的感觉、这么想着叹了口气。</p>
     <p class="divline"></p>
     <p>シュフ「食事だけを提供する店……？　その手があったか！」ガタッ</p>
     <p>・シュフ、何かに気付く。</p>
-    <p>ジークリンデ「おーい梅赛德斯―」ブルンバルン</p>
+    <p>吉克林德「おーい梅赛德斯―」ブルンバルン</p>
     <p>男子生徒　（でけえ……）</p>
     <p>男子B　（ゴクリ）</p>
     <p>男子C（乳テント……）</p>
     <p>男子D　（………………）男子Dは無言で拝んでいる</p>
-    <p>・ジークリンデの支持率が上昇しました。</p>
+    <p>・吉克林德の支持率が上昇しました。</p>
 </body>
