--- a/OEBPS/Text/c085.xhtml
+++ b/OEBPS/Text/c085.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>85. 幼稚的装饰</h1>
-    <p>为了看巴西所说的真正的王，决定同行的梅赛德斯被带到了小巷深处的安宿。</p>
+    <p>为了看罗勒所说的真正的王，决定同行的梅赛德斯被带到了小巷深处的安宿。</p>
     <p>一楼是酒馆，虽然外面很繁盛，但是因为地方是场所，所以客人的质量不好。</p>
     <p>罗勒一进厨房，就把铺在地板上的布撕开，用手抓起来。</p>
     <p>于是，一部分地板打开，向下延伸的楼梯就出现了。</p>
@@ -55,7 +55,7 @@
     <p>被邀请到屋子里，梅赛德斯观察着士兵们。</p>
     <p>从士兵们那里完全感觉不到生气，一点动也不动。</p>
     <p>恐怕这也是某种魔物吧。</p>
-    <p>我这样想着就问了下图威尔夫，他马上回答了。</p>
+    <p>我这样想着就问了下zwölf，他马上回答了。</p>
     <p>“制造编号799。正式名称P-001。当地识别名、游戏内裤。</p>
     <p>掌管的属性是“铁”单一。</p>
     <p>在裤衩种中最战力劣于其他的种子防御力优秀。</p>
