--- a/OEBPS/Text/c089.xhtml
+++ b/OEBPS/Text/c089.xhtml
@@ -14,8 +14,8 @@
     <p>※今夜辺りに殺られてたよ→今日の朝にでも殺られてたよ　に修正。</p>
     <p>吸血鬼の行動時間帯が夜なのを失念してました。</p>
     <p class="divline"></p>
-    <p>フェリックスとマックス・ファイトの嫌な繋がりが見えてしまった翌日。</p>
-    <p>梅赛德斯とハンナは早速、裏を取る為にとある場所を目指していた。</p>
+    <p>菲利克斯とマックス・ファイトの嫌な繋がりが見えてしまった翌日。</p>
+    <p>梅赛德斯と汉娜は早速、裏を取る為にとある場所を目指していた。</p>
     <p>王都アーベントロートから馬車で七日ほど、ピーコならば一日で着く距離にあるシュピラーレという都市が今回の目的地だ。</p>
     <p>ここら一帯はシェーンベルク侯爵家が治める土地であり、海に面している為に豊富な海産物が名物となっている。</p>
     <p>シェーンベルグは侯爵家の一つであり、公爵を除けば貴族の位としては最上位と言っていい。</p>
@@ -26,52 +26,52 @@
     <p>その事は愚王アウグストがクリストフの抹殺を図った事からも分かるだろう。</p>
     <p>なので王以外の王族は子孫を残さず、一代で消えなければならない。</p>
     <p>王族という事で生きている間は敬われるし贅沢も出来るが、それでも一つの勢力になる事は絶対に許されないし、大公の位も与えられない。</p>
-    <p>その次の公爵は一応グリューネヴァルト家が該当するが、これも基本的にはいない。</p>
+    <p>その次の公爵は一応格鲁内瓦特家が該当するが、これも基本的にはいない。</p>
     <p>公爵は貴族の中でも別格で、王族に限りなく近い発言力と影響力を持つ。</p>
     <p>その次に位置するのが侯爵家だ。</p>
-    <p>そして梅赛德斯とハンナは、その侯爵家に用があってここまで来ていた。</p>
+    <p>そして梅赛德斯と汉娜は、その侯爵家に用があってここまで来ていた。</p>
     <p>ピーコから降りて門を潜り、都市の中に入る。</p>
     <p>シュピラーレはオルクスに比べれば劣るもののかなり賑わった都市だ。</p>
     <p>その中でも一際目立つ大きな屋敷が今回の目的地であった。</p>
-    <p>そこへ向かう道を歩きながら、梅赛德斯は気になった事をハンナへ尋ねる。</p>
+    <p>そこへ向かう道を歩きながら、梅赛德斯は気になった事を汉娜へ尋ねる。</p>
     <p>「件の人物はニクラス・ユンカースだったか。これから向かう屋敷とは家名が違うようだが？」</p>
     <p>「ニクラスは元々は子爵家なんだよ。けどシェーンベルク家に婿入りして家名が変わったの。</p>
     <p>だから今はニクラス・ユンカース・フォン・シュピラーレ・シェーンベルクっていう長ったらしい名前になってるよ」</p>
-    <p>「つまりユンカース家のニクラスがシェーンベルク家に婿入りして、そこの娘であるヴァルブルガがグリューネヴァルト家に入って……しかしヴァルブルガは本当はファイト家の娘かもしれない、と。</p>
+    <p>「つまりユンカース家のニクラスがシェーンベルク家に婿入りして、そこの娘であるヴァルブルガが格鲁内瓦特家に入って……しかしヴァルブルガは本当はファイト家の娘かもしれない、と。</p>
     <p>何だかややこしくなってきたな」</p>
     <p>「貴族なんてどこもそんなもんだよ。あちこちが親戚だらけ」</p>
-    <p>話しながらハンナはケラケラと笑う。</p>
+    <p>話しながら汉娜はケラケラと笑う。</p>
     <p>彼女としても親戚ばかりの貴族の在り方に思うものはあるのだろう。</p>
     <p>その笑い方はどこか貴族というものを皮肉っているようにも見えた。</p>
     <p>「ニクラスは子爵家の次男坊でね。爵位はお兄さんが継ぐ事になった上に本人はなかなかいい出会いに恵まれなくて、何か気付いたら隠密部隊に入隊してたんだって」</p>
     <p>「そんな適当に入っていいのか……暗部」</p>
     <p>「私が入った時は長くいる割にパッとしないっていう地味な人だったなあ。</p>
     <p>でも経験は隊の中で一番だったから私が隊長になった時に副官に任命したの」</p>
-    <p>どうやらニクラスとやらはハンナの先輩で年上らしい。</p>
+    <p>どうやらニクラスとやらは汉娜の先輩で年上らしい。</p>
     <p>まあそれもそうか、と思う。</p>
-    <p>ハンナは子供はいても孫はいない。つまりはベルンハルトやヴァルブルガと同じ親世代だ。</p>
+    <p>汉娜は子供はいても孫はいない。つまりはベルンハルトやヴァルブルガと同じ親世代だ。</p>
     <p>一方ニクラスはそのヴァルブルガの父なのだから、言うならば祖父の世代である。</p>
     <p>この辺りがややこしく曖昧になってしまっているのは、長命の吸血鬼だからこそか。</p>
     <p>ここで少し整理しよう。</p>
     <p>まず祖父の世代に該当するのは今言ったニクラスに、それからアウグスト・アーベントロート。</p>
-    <p>次に親世代。ここに入るのはベルンハルトとハンナ、ヴァルブルガにイザーク、それから見た目は完全にジジイだったがフレデリックもここか。改めて考えると哀しい男である。</p>
+    <p>次に親世代。ここに入るのはベルンハルトと汉娜、ヴァルブルガにイザーク、それから見た目は完全にジジイだったが弗里德里克もここか。改めて考えると哀しい男である。</p>
     <p>そして子世代が自分達だ。</p>
-    <p>……もしかしてハンナは親世代の中ではかなり年長の部類なのでは？　梅赛德斯は訝しんだ。</p>
+    <p>……もしかして汉娜は親世代の中ではかなり年長の部類なのでは？　梅赛德斯は訝しんだ。</p>
     <p>「あ、着いたよ」</p>
-    <p>ハンナの声で意識が現実に引き戻される。</p>
+    <p>汉娜の声で意識が現実に引き戻される。</p>
     <p>到着したそこは立派な屋敷で、屋根には……何だろう？</p>
     <p>まるでソフトクリームのようなクルクルと螺旋を巻いた変なオブジェが取り付けられている。</p>
     <p>金色のソフトクリームだろうか？</p>
     <p>茶色にすると少しやばい気がする。</p>
     <p>「ちょっと待っててね。門番の人に話を通して来るから」</p>
-    <p>ハンナがそう言いながら歩いていくのを見送り、梅赛德斯は改めて屋敷を見る。</p>
+    <p>汉娜がそう言いながら歩いていくのを見送り、梅赛德斯は改めて屋敷を見る。</p>
     <p>貴族は親戚だらけ……なるほど。</p>
     <p>何かこの特徴的なグルグルはどこかで見たような気がしないでもない。</p>
     <p>覚えていないと言う事は影の薄い、どうでもいい奴だったという事なのだろうが……きっとこの家も、自分が知る誰かの親戚か、あるいは実家なのだろう。</p>
-    <p>◆</p>
+    <p class="divline"></p>
     <p>それからしばらくして、梅赛德斯達は応接室へと通された。</p>
     <p>アポなし突撃であったが、かつての上司の訪問ともなれば通さないわけにはいかないのだろう。</p>
-    <p>やや目に眩しい装飾で飾られた豪華な応接室で梅赛德斯とハンナを出迎えたのは一組の夫婦だ。</p>
+    <p>やや目に眩しい装飾で飾られた豪華な応接室で梅赛德斯と汉娜を出迎えたのは一組の夫婦だ。</p>
     <p>男の方は黒髪の、何だかパッとしない顔立ちの男だ。</p>
     <p>不細工ではないが美形でもない。</p>
     <p>外見年齢は三十代前半くらいだろうか。少し頬が痩せこけている。</p>
@@ -81,17 +81,17 @@
     <p>女性で不老期が遅いタイプは珍しいが、しかし彼女は不思議とそれが魅力的に見えた。</p>
     <p>刻まれた皺や、鋭い瞳が他の女性にはない威厳と力強さを持たせているのだ。</p>
     <p>背も高く、何とも頼りになりそうな女性だ。</p>
-    <p>「お久しぶりです、ハンナ隊長。お変わりないようで……」</p>
+    <p>「お久しぶりです、汉娜隊長。お変わりないようで……」</p>
     <p>「ニクラスは少し痩せたかな？　昔はもっとガッシリしてたのに」</p>
     <p>「はは、運動不足でして……」</p>
     <p>ニクラスはどうやら現役時代はもっと筋肉質だったらしい。</p>
-    <p>困ったように笑う彼に合わせてハンナも笑い、しかし不意にその表情が引き締まる。</p>
+    <p>困ったように笑う彼に合わせて汉娜も笑い、しかし不意にその表情が引き締まる。</p>
     <p>「運動だけじゃなく、気配の探知も下手になっちゃったかな」</p>
     <p>「え、それはどういう……」</p>
-    <p>ハンナは横、上、斜めと視線を動かしてから声を小さくして言う。</p>
+    <p>汉娜は横、上、斜めと視線を動かしてから声を小さくして言う。</p>
     <p>「何匹かネズミが入ってるね、これ。正確な数までは分からないけど」</p>
     <p>「なっ！？」</p>
-    <p>ハンナの言葉にニクラスが動揺するが、そんな彼にハンナは人差し指を立てて静かにするよう促した。</p>
+    <p>汉娜の言葉にニクラスが動揺するが、そんな彼に汉娜は人差し指を立てて静かにするよう促した。</p>
     <p>夫人の方は度胸が据わっているのか、落ち着いたものだ。</p>
     <p>彼女は特に動揺も見せずに、静かに言う。</p>
     <p>「真の王とやらを掲げる一団ですか」</p>
@@ -101,13 +101,13 @@
     <p>フィクションではよく、『木の陰に一人、後ろの壁に二人、向かいの建物の裏に二人……合計五人か』とか恰好よく言ってたりするし、更に飛躍した表現では遥か遠くのビルにいる敵に気付くような描写もあったりする。</p>
     <p>だが、普通に考えてそんな事が分かるわけがない。</p>
     <p>背後から僅かな物音などがすれば分かるかもしれないが、視覚、聴覚、触覚のどれにも接触しなければ気付く事など出来ないだろう。</p>
-    <p>恐らくは空気中のナノマシンが何か影響して、それでハンナは感知出来ているのだろうが、今度やり方を教えてもらいたいな、などと梅赛德斯は呑気に考えていた。</p>
+    <p>恐らくは空気中のナノマシンが何か影響して、それで汉娜は感知出来ているのだろうが、今度やり方を教えてもらいたいな、などと梅赛德斯は呑気に考えていた。</p>
     <p>そして少しややこしいが、吸血鬼にとっては夜が一日の始まりで朝が終わりだ。</p>
     <p>なので『今日の朝』という少しおかしな表現になってしまう。</p>
     <p>「詳しい話は明日にでも聞くとして、今日、泊まっていっていいかな？」</p>
     <p>「勿論ですわ。貴方もそれでよろしいですわね？」</p>
     <p>「あ、ああ」</p>
-    <p>ハンナの提案に、夫人が迷うことなく即決を下した。</p>
+    <p>汉娜の提案に、夫人が迷うことなく即決を下した。</p>
     <p>どうやらこの家では奥さんの方が強いらしい。</p>
     <p>何とも頼りになる、格好いい女性という感じだ。</p>
     <p>これで頭にグルグルした茶色の変な物を載せてなければよかったのだが。</p>
@@ -117,24 +117,24 @@
     <p>「分かりました。では何としても今日中にネズミを全て駆除してみせます」</p>
     <p>「頼りにしています。何か必要なものはありますか？」</p>
     <p>「んー……では、いくつか」</p>
-    <p>夫人とハンナが話すのを聞きながら、梅赛德斯は何となく天井に意識を向けてみた。</p>
+    <p>夫人と汉娜が話すのを聞きながら、梅赛德斯は何となく天井に意識を向けてみた。</p>
     <p>やはり何も分からない。</p>
-    <p>だがまあ、ハンナがいると言った以上はいるのだろう。</p>
+    <p>だがまあ、汉娜がいると言った以上はいるのだろう。</p>
     <p>ならば自分はただ、目の前に現れた敵を潰せばいい。</p>
-    <p>「ハンナ。私はどうする？」</p>
+    <p>「汉娜。私はどうする？」</p>
     <p>「勿論メルちゃんにも働いてもらうよ。こっち側の最大戦力だしね」</p>
     <p>「分かった。指示に従おう」</p>
     <p>自分が下手に動いてもネズミを逃がしてしまうだけだ。</p>
     <p>極論から言えば梅赛德斯が夫妻の近くで待機していれば暗殺を防ぐ事は出来る。</p>
     <p>だが逃げるネズミを捕まえるのは梅赛德斯には難しい。</p>
-    <p>ここはハンナのお手並み拝見だな。そう思いながら梅赛德斯は静かに戦意を高めていた。</p>
+    <p>ここは汉娜のお手並み拝見だな。そう思いながら梅赛德斯は静かに戦意を高めていた。</p>
     <p>そして、事態についていけてないニクラスは、やけに頼もしい女性三人を見ながら呆けていた。</p>
     <p class="divline"></p>
     <p>※ニクラスさんの髪の色を間違えて金髪にしていたので黒に修正しました。</p>
     <p>夫人「余談ですが、実は頭のこれ、回転します」ギュイイイイン</p>
     <p>梅赛德斯（本当に髪か、それ……？）</p>
     <p>【頭にウンコ乗せた夫人】</p>
-    <p>ヴァルブルガの母であり、フェリックスの祖母。</p>
+    <p>ヴァルブルガの母であり、菲利克斯の祖母。</p>
     <p>不老期が遅かったが、それがマイナスではなくプラスに働いた希少なタイプ。</p>
     <p>決断力に優れ、基本的に即断即決。夫を尻に敷いており、実質的に侯爵家を支配している。</p>
     <p>名前はカルメン。</p>
