欠月的梅赛德斯部分修改

--- a/OEBPS/Text/c046.xhtml
+++ b/OEBPS/Text/c046.xhtml
@@ -36,7 +36,7 @@
     <p>はて、どこで聞いた名前だったか。</p>
     <p>「両脇にいるこいつ等は僕の護衛だ。</p>
     <p>王家に古くから仕える裏の重鎮とも言える一族がいてね。この二人はその当主の血を引く者達さ。</p>
-    <p>更に彼等の母は王家直属の隠密部隊の隊長でもあり、僕の家庭教師でもある。</p>
+    <p>更に彼等の母は王家直属の隠密部隊の隊長でもあり、僕の家庭教师でもある。</p>
     <p>ああ、脅しているわけではないよ。ただ事実を教えているだけさ」</p>
     <p>随分とお喋りかつ、自慢したがりな性格らしい。</p>
     <p>この時点で既に三下感が漂っているが、梅赛德斯はあえて指摘せず言葉を聞いていた。</p>
@@ -65,12 +65,12 @@
     <p>ダラダラと冷や汗をかいており、その顔には『何故？』という疑問がありありと浮かんでいる。</p>
     <p>護衛の二人もそれは同様で、ガクガクと震えてすらいた。</p>
     <p>「……ハ、汉娜……先生……？」</p>
-    <p>「はーい。貴方の家庭教師の汉娜でーす」</p>
-    <p>「…………あの、何故学園に？　り、臨時教師ですか？」</p>
+    <p>「はーい。貴方の家庭教师の汉娜でーす」</p>
+    <p>「…………あの、何故学園に？　り、臨時教师ですか？」</p>
     <p>「王女様の護衛よ。生徒として潜入してるの」</p>
     <p>「あの……貴女、生徒って年齢じゃ……」</p>
     <p>「んー？　聞こえないなあ？」</p>
-    <p>どうやらハルトマンの言っていた家庭教師とは汉娜の事だったらしい。</p>
+    <p>どうやらハルトマンの言っていた家庭教师とは汉娜の事だったらしい。</p>
     <p>王家直属の隠密部隊の隊長というのも彼女の事であり、更に汉娜の夫が王家直属の裏幹部である事までこれで判明してしまった。</p>
     <p>汉娜自身は商人の子とか言っていたが……恐らく、バーガー家の表の立場が商人なのだろう。</p>
     <p>「……マ、ママン……」</p>
