--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -15,11 +15,13 @@
     <p>取而代之的是3米大小的巨大蜥蜴……不，是龙。</p>
     <p>稍稍驼背以二足步行站立，全身绿色的鳞被覆盖。</p>
     <p>从龙的角度来考虑的话，应该是相当小型的吧。</p>
+    <br>
     <p>“当地识别名，小龙。</p>
     <p>龙种中属于弱部类，但是拥有咬断大树的咬肌力和使大树成为可能的牙齿，如果是猪人程度的话可以两断的爪子，全身的鳞片如果只是铁剑程度的话会反弹，从口中吐出1000℃的火焰。</p>
     <p>对于初学者来说可以说是比较严厉的对手吧”</p>
     <p>“嗯……话说回来，名字好像和奥尔克斯这边的语言体系有些不同？”</p>
     <p>“要推测的话，最初发现并命名的不是吸血鬼以外的种族吗？”</p>
+    <br>
     <p>小龙的名字也知道梅赛德斯。</p>
     <p>现在使用的鞋子应该是用小龙做成的鞋子。</p>
     <p>但是仔细想想，小龙这个名字不是奥尔克斯的语言。</p>
@@ -31,30 +33,39 @@
     <p>果冻和小龙互相殴打，稍显劣势。</p>
     <p>小龙的物理攻击在流动体的果冻面前是没有意义的，但是火焰辐射是不同的。</p>
     <p>史莱姆系不耐火焰。幻想的常识。</p>
+    <br>
     <p>「喵—！我是燃烧的果冻哦！”</p>
     <p>“算了，回去吧。”</p>
+    <br>
     <p>如果就这样放任不管的话，果冻会死，所以回到了蓝天蓼蓝BOSS的钥匙，小黑替换着飞了出去。</p>
     <p>用眼睛也止不住的敏捷咬小龙的脚，使之下降。</p>
     <p>接着，本凯挥下大剑，斩断了尾巴。</p>
     <p>小龙也马上站起来,不过，此次在那里梅赛德斯自己跳入了。</p>
     <p>就那样气势任凭一只手一闪地闪动burutoizen,不过，刃在咬住头的地方停住了。</p>
+    <br>
     <p>（真硬啊……但是）</p>
+    <br>
     <p>如果一只手不行就用双手。</p>
     <p>迅速将蓝冰变成双手，用力甩开。</p>
     <p>于是这次小龙的头被两断，一边撒血一边在地上滚动。</p>
     <p>看到这一幕，舒夫迅速靠近，开始解体和抽血。</p>
     <p>喂，战斗吧。</p>
+    <br>
     <p>“果然，门不出来啊。完全被隐藏了呢”</p>
+    <br>
     <p>虽然知道但没有门。</p>
     <p>恐怕门在更下面的阶层，被地牢的扩展机能掩盖了吧。</p>
     <p>简而言之，楼梯向下延伸，已被主人撤去。</p>
     <p>或者破坏地板，硬是去楼下的楼层的话，也许能发现门，但是黑门也不会出来吧。</p>
+    <br>
     <p>“主人。这个龙，装备着奇怪的手镯”</p>
-    <p>我们回去吧。这样想着，施厚拿来了手镯。</p>
+    <p>我们回去吧。这样想着，舒夫拿来了手镯。</p>
     <p>明明是龙却装备了什么。</p>
     <p>这么说来，接待处好像也说这里的BOSS有一些豪华的装备。</p>
+    <br>
     <p>《嗯。看来使用火焰的时候有提高火力的效果”</p>
     <p>“是火属性的支持吗？对我来说不会用啊”</p>
+    <br>
     <p>此次的宝物是火属性用的辅助器具,不过，梅赛德斯的属性是风和地。用不着。</p>
     <p>但是自己所有的迷宫里也有使用火的魔物，所以不会浪费吧。</p>
     <p>暂且决定预先持(有)着，收纳到了地牢。</p>
@@ -71,6 +82,7 @@
     <p>与梅赛德斯相反，没有参加狩猎节的吉克林德高兴地参加了。</p>
     <p>之所以没有参加狩猎祭，是因为作为王族的她一出去，就已经完成了一强派系，所以很讨厌。</p>
     <p>但是这个武艺节没有派系。由于公主这个事被偏袒,不过，尽管如此比狩猎祭遥远地容易做。</p>
+    <br>
     <p>梅赛德斯拒绝参加下级生俱乐部，但并不是对武艺节本身没有兴趣。</p>
     <p>高年级同学之间的战斗等能参考的技术等也大量地出来，光看损失不做。</p>
     <p>如果说综合实力的话，虽然没有人能到达梅赛德斯，但这个学校有通过重力训练得到的压倒性的基础规格。</p>
@@ -88,13 +100,15 @@
     <p>反过来一边粗暴地削一边闹腾的是螺旋派领导人的jisutous·shenberuku吗？</p>
     <p>那个狩猎节过后仍不服气地前来劝诱梅赛德斯的男人，虽然没有技术，却凭借得天独厚的体格和腕力强加于人。</p>
     <p>仔细想想，只有这家伙才20岁反复留级。有利是当然的。</p>
+    <br>
     <p>结果下级生的部分优胜的是吉克林德，上级生以吉克斯图斯激战后优胜闭幕了。</p>
     <p>菲利克斯以亚军告终，但正统派果然很强。</p>
     <p>但是，观众席中已经没有了伯恩哈特的身影。</p>
     <p class="divline"></p>
-    <p>ジクストゥス（２０）「フハハハハハ！　俺こそ学園最強だ！」</p>
-    <p>教師（そりゃあこいつだけ二十歳なんだから勝つの当たり前だよなあ……）</p>
-    <p>教師（誰かこいつ参加禁止にしろよ……）</p>
-    <p>教師（座学がクソすぎて毎年赤点で留年してるけど、実技だけは強いんだよなコイツ）</p>
-    <p>汉娜（菲利克斯君、実質優勝なのに可哀想……）</p>
+    <p>吉克斯图斯（２０）「呼哈哈哈哈哈！　俺是学院最强！」</p>
+    <p>教师（那是因为只有这家伙是20岁，所以胜利是理所当然的……）</p>
+    <p>教师（谁来让这家伙禁止参加啊……）</p>
+    <p>教师（这家伙座学差得每年都要留级、只有实际技巧很强啊）</p>
+    <p>汉娜（菲利克斯君、实质优胜真可怜……）</p>
+    <p>【悲報】菲利克斯大哥无论到哪里都是个倒霉蛋</p>
 </body>
