--- a/OEBPS/Text/c061.xhtml
+++ b/OEBPS/Text/c061.xhtml
@@ -25,7 +25,7 @@
     <p>それを見抜けなかった己の間抜けさと、まんまと踊らされたという事実。</p>
     <p>それらが伸しかかり、菲利克斯の気を沈ませていた。</p>
     <p>「殿下は……これからどうなるんだ」</p>
-    <p>「さあなあ……まあ、傷を付けるなって言われたし、悪いようにはならないと思うが」</p>
+    <p>「谁知道呢……嘛，被说了不能让她受伤，我想应该不会被恶劣对待吧」</p>
     <p>菲利克斯の問いに隊長と呼ばれている白装束が答えた。</p>
     <p>隊長といえど、所詮は隠密の一部隊の長に過ぎない。</p>
     <p>この作戦の詳細な目的までは知らないのだろう。</p>
