--- a/OEBPS/Text/c116.xhtml
+++ b/OEBPS/Text/c116.xhtml
@@ -33,7 +33,7 @@
     <p>現在、その家ではベンケイがマックスとユリアの教育をしているはずである。</p>
     <p>家に近付くとまず、家の外でくつろいでいたクロが尻尾を振りながら歩いてきたので頭を撫でてやった。</p>
     <p>そのまま自分の家なので一切遠慮せずにドアを開けて居間へ向かう。</p>
-    <p>そこではテーブルを挟んでベンケイ、マックス、ユリア、それから教師役としてベンケイのサポートを頼んでおいたゴブリンヘクサーが座っていた。</p>
+    <p>そこではテーブルを挟んでベンケイ、マックス、ユリア、それから教师役としてベンケイのサポートを頼んでおいたゴブリンヘクサーが座っていた。</p>
     <p>他に梅赛德斯が所有（？）している魔物以外の存在としては女帝ベアトリクスがいるが、アレは教育によくなさそうなので帝国ダンジョンの方に屋敷を建てて、そちらに住ませている。なのでこっちにはいない。</p>
     <p>「！」</p>
     <p>梅赛德斯が居間に入ると、マックスは慌てて脱兎のように逃げて部屋の隅に蹲ってしまった。</p>
