--- a/OEBPS/Text/c098.xhtml
+++ b/OEBPS/Text/c098.xhtml
@@ -12,29 +12,34 @@
 <body>
     <h1>98. 发现</h1>
     <p>在迷宫中准备的房子……罗勒在那个房间里抱着头。</p>
-    <p>几次去除头发，简直就像脑袋里还有没用的想法就想把头发拉出来一样。</p>
+    <p>无数次地挠着头发，简直就像脑袋里还有没用的想法就想把头发拉出来一样。</p>
     <p>富余的脸现在被焦躁支配，纤细的脸上满是皱纹歪斜着。</p>
     <p>……到了最后关头。</p>
     <p>真正的王派，没有留下最快的手段。</p>
     <p>强者们纷纷在汉娜的幕后工作中翻身，作为苦肉计策而实行的袭击不知为何以失败告终。</p>
-    <p>或许是魔物们吧，袭击的犯人是真正的王派的事到处散布，在国内对麦克斯的heit到最高潮高涨着。</p>
+    <p>或许是魔物们吧，袭击的犯人是真正的王派的事到处散布，在国内对麦克斯的厌恶程度到最高潮高涨着。</p>
     <p>不明白意思。明明魔物绝对不会背叛我们的……恐怕，尤利亚一定下达了命令。</p>
     <p>100%不会背叛的魔物做出了愚蠢的行动，命令它的人在我方内。</p>
     <p>因此尤利亚为了不再做多余的事而关在牢里，日后将处刑。</p>
     <p>本人说“我是无辜的！”除了这家伙以外，没有其他傻瓜干了。</p>
+    <br>
     <p>因为尤利亚关闭了，再也没有被搅拌的畏惧了。</p>
     <p>但是已经晚了。到头了。已经结束了。</p>
     <p>民众的感情完全朝向了憎恶麦克斯的方向，即使从现在开始夺取了国家，也只能迎来即反叛的末路吧。</p>
     <p>吸血鬼是力量的信奉者。那么，我们还有一种最后的办法就是用力争夺宝座……但是，就算再怎么崇拜强者，袭击自己的王也不崇拜流石。</p>
     <p>也就是说，已经无可奈何了。</p>
+    <br>
     <p>（不行……已经无计可施了。</p>
     <p>这样的话……只能逃避……）</p>
+    <br>
     <p>最后剩下的选择，不是解决方案，只是逃亡。</p>
     <p>从这里开始逆转是不可能的，所以从王都逃走，在别的地方重新站起来……这样的话再起也不是不可能的。</p>
     <p>只要有迷宫钥匙和Max，无论从哪里都可以重做。</p>
     <p>从没有迷宫的小国王开始也可以，推销作为迷宫持久性的事说不定哪里的国家的中枢进入。</p>
+    <br>
     <p>（话虽如此，我不是这种地方结束的男人。</p>
     <p>没关系……只要有Max和迷宫，就可以重新来过……）</p>
+    <br>
     <p>这个国家的战斗结束了。</p>
     <p>即使再继续下去，也只能用自己的脚朝着绞颈台前进。</p>
     <p>但是改变战场的话还能战斗。</p>
@@ -46,18 +51,22 @@
     <p>他是不知道的事,不过，判断洞窟钥匙的方法存在。</p>
     <p>那是只有攻略者才有的特权，是只借给攻略者的管理者的存在。</p>
     <p>管理者，如果注视能识别洞窟钥匙。</p>
+    <br>
     <p>是的，能够分辨出来。</p>
+    <br>
     <p>“找到了。原来在这种地方”</p>
+    <br>
     <p>在迷宫外面有人这样说，抓住了迷宫钥匙。</p>
     <p>真没想到，罗勒看了迷宫外面的景色。</p>
     <p>虽然不知道是什么样的结构，但是在迷宫里也能看到外面。当然，如果有主人的许可的话也是这样的。</p>
     <p>然后他看到的是几天前想拉进这里的格鲁内瓦特家的长女……菲利克斯的妹妹梅赛德斯·格鲁内瓦特和她的姑母汉娜的身姿。</p>
     <p class="divline"></p>
-    <p>在将袭击王都的Heito做成Max之后，梅赛德斯一边从复制的铠甲的魔物那里听到情报一边寻找王都内。</p>
+    <p>在将袭击王都的仇恨做成Max之后，梅赛德斯一边从复制的铠甲的魔物那里听到情报一边寻找王都内。</p>
     <p>这个魔物本来就是以一次性使用为前提而放出的，所以并没有什么特别的情报。</p>
     <p>连马克斯和罗勒隐藏了的地牢钥匙的位置也没掌握，想什么都没有有用的东西。</p>
     <p>但是有从那样的魔物们也能取得的信息。</p>
     <p>这是袭击王都时，被指示“不可攻击”的地方。</p>
+    <br>
     <p>如果连真正王派的贵族和潜伏的伙伴都攻击的话，就只是互相讨伐。</p>
     <p>因此那个王都袭击，存在着几个不自然地被攻击的地方。</p>
     <p>于是汉娜把没有受到袭击的贵族，梅赛德斯调查了其他的情况。</p>
@@ -69,25 +78,31 @@
     <p>譬如如果做着与市贩的装饰品同样的形式，那个是不是洞窟钥匙等看明白的东西。</p>
     <p>但是梅赛德斯能做那个。</p>
     <p>如果是ツヴェルフ的话，注视一下就可以判断是不是地牢钥匙了。</p>
+    <br>
     <p>对梅赛德斯而言更是幸运，对罗勒而言不幸的是迷宫变成了两个，感知其他迷宫的能力有了一点点提高。</p>
     <p>这是理所当然的事情，比起一个人做，两个人分担的工作效率更高。</p>
     <p>除了泽维尔夫，还有一个人……由于影子薄的管理者的zuiven加入的事精度上升着。</p>
     <p>多亏了那件事，梅赛德斯才从管理者的导航和建筑物的损坏情况等好不容易走到一间小屋。</p>
+    <br>
     <p>说点题外话，虽说是导航，其实也没那么准确。</p>
     <p>“总觉得，感觉好像是在那边”的轻飘飘的无法依靠的导航，在来到这里之前已经陷入了调查好几次完全无关的建筑物的困境。</p>
-    <p>跟随ZEVEN的引导，结果在公共浴场的那些**们裸露的困境下真的想把它扔掉。</p>
+    <p>跟随zwölf的引导，结果在公共浴场的那些混蛋们裸露的困境下真的想把它扔掉。</p>
     <p>说到底他们的导航就是指全身青紧身衣的少年机器人在玩滑雪板的时候在周围飞来飞去《滑动滑行！》和在偏离的定时发出指示的导航器没有作用。</p>
     <p>可是不擅长的子弹也数击中了。</p>
     <p>几次徒劳的末了，梅赛德斯想办法到达正确的解答，与汉娜一起拿着地牢钥匙。</p>
+    <br>
     <p>“是那个吗？”</p>
     <p>“啊，没错……”</p>
+    <br>
     <p>汉娜的问题中，梅赛德斯回答得有些靠不住。</p>
     <p>虽然提到zuverfu是这个，但是看上去只是一种装饰品。</p>
     <p>设计上就像是连着锁链的小剑，让人联想到前世在特产柜台排列着的龙之剑的钥匙圈。</p>
+    <br>
     <p>“但是，没有任何反应？”</p>
     <p>“恐怕对方也注意到了，但不知道怎么办才好。</p>
     <p>如果就这样沉默下去的话，我们只是想做饰品而离开……但是还是很期待的吧。</p>
     <p>话虽如此，但很快就会明白那也是不可能的”</p>
+    <br>
     <p>如果可以的话希望迷宫钥匙就这样保持沉默。</p>
     <p>在这种地方闹事的话比较麻烦。</p>
     <p>但是，从对方的角度来看，除此之外别无他法。</p>
@@ -97,4 +112,27 @@
     <p>但是紧接之后洞窟钥匙从待机模式变成钥匙模式，变成了枪。</p>
     <p>虽然说是王剑，但好像克里斯托夫把迷宫变成了枪的形状。</p>
     <p>接下来是复数的魔物和罗勒……麦克斯出现在现场，他的手里握着长枪。</p>
+    <p class="divline">
+    </p>
+    <p>【役に立たないナビゲート】</p>
+
+    <p>ロックマン８で多くのプレイヤーを悩ませた存在。</p>
+
+    <p>スノボーステージでロックマンがジャンプするかスライディングするかを教えてくれるのだが、そのタイミングがシビアでナビ同士が互いを食い合うように主張しまくるせいで全然役に立たない。</p>
+
+    <p>後半はほとんど同時にジャンプ！スライディング！と連呼してるだけ。</p>
+
+    <p>具体的には↓みたいな感じ。</p>
+
+
+
+    <p>ナビＡ『ジャンプ！　ジャンプ！』</p>
+
+    <p>ナビＢ『スライディング！　スライディング！』</p>
+
+    <p>ナビＡ『ジャンプ！　ナビＢ『スライディング！　スラ……ナビＡ『ジャンプ！　ジャンプ！』</p>
+
+    <p>＼ジャンプ！／＼スライディング！／＼ジャ＼スライディング！／ンプ！／＼スライディ＼ジャンプ！／</p>
+
+    <p>＼ジャ＼スライ＼ジャン＼スライディン＼ジャ＼スラ＼ジャンプ！／</p>
 </body>
